--- a/docs/docs-ref-autogen/onenote/toc.yml
+++ b/docs/docs-ref-autogen/onenote/toc.yml
@@ -2,7 +2,7 @@ items:
   - name: API 参考
     items:
       - name: API 参考概述
-        href: overview.md
+        href: ../overview/overview.md
       - name: OneNote
         uid: onenote!
         items:
@@ -25,7 +25,7 @@ items:
                 uid: 'onenote!OneNote.PageContentType:enum'
               - name: ParagraphType
                 uid: 'onenote!OneNote.ParagraphType:enum'
-          - name: 应用程序
+          - name: Application
             uid: 'onenote!OneNote.Application:class'
           - name: FloatingInk
             uid: 'onenote!OneNote.FloatingInk:class'
@@ -169,7 +169,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -211,7 +211,7 @@ items:
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: Error
+              - name: 错误
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -287,7 +287,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: Error
+              - name: 错误
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
