--- a/docs/docs-ref-autogen/toc.yml
+++ b/docs/docs-ref-autogen/toc.yml
@@ -2,7 +2,7 @@ items:
   - name: API 参考
     items:
       - name: API 参考概述
-        href: /javascript/api/overview/
+        href: /javascript/api/overview
       - name: Excel
         href: /javascript/api/excel?view=excel-js-preview
       - name: OneNote
@@ -15,5 +15,5 @@ items:
         href: /javascript/api/visio?view=visio-js-1.1
       - name: Word
         href: /javascript/api/word?view=word-js-preview
-      - name: CommonAPI
+      - name: 通用 API
         href: /javascript/api/office?view=common-js
