--- a/docs/docs-ref-autogen/outlook_1_5/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/toc.yml
@@ -2,7 +2,7 @@ items:
   - name: API 参考
     items:
       - name: API 参考概述
-        href: overview.md
+        href: ../overview/overview.md
       - name: Outlook
         uid: outlook!
         items:
@@ -48,7 +48,7 @@ items:
             uid: 'outlook!Office.EmailUser:interface'
           - name: 实体
             uid: 'outlook!Office.Entities:interface'
-          - name: Item
+          - name: 项目
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -68,7 +68,7 @@ items:
             uid: 'outlook!Office.NotificationMessages:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: 收件人
+          - name: Recipients
             uid: 'outlook!Office.Recipients:interface'
           - name: ReplyFormAttachment
             uid: 'outlook!Office.ReplyFormAttachment:interface'
@@ -76,7 +76,7 @@ items:
             uid: 'outlook!Office.ReplyFormData:interface'
           - name: RoamingSettings
             uid: 'outlook!Office.RoamingSettings:interface'
-          - name: 主题
+          - name: Subject
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
             uid: 'outlook!Office.TaskSuggestion:interface'
@@ -152,7 +152,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -194,7 +194,7 @@ items:
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: Error
+              - name: 错误
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -270,7 +270,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: Error
+              - name: 错误
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
