--- a/docs/docs-ref-autogen/word_1_1/toc.yml
+++ b/docs/docs-ref-autogen/word_1_1/toc.yml
@@ -2,7 +2,7 @@ items:
   - name: API 参考
     items:
       - name: API 参考概述
-        href: overview.md
+        href: ../overview/overview.md
       - name: Word
         uid: word!
         items:
@@ -157,7 +157,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -199,7 +199,7 @@ items:
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: Error
+              - name: 错误
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -275,7 +275,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: Error
+              - name: 错误
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
