--- a/docs/docs-ref-autogen/word_1_1/word/word.body.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.body.yml
@@ -176,7 +176,7 @@ items:
           ```
   - uid: 'word!Word.Body#getHtml:member(1)'
     summary: |-
-      获取 body 对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式设置完全匹配，但不完全匹配。 此方法不会为不同平台（Windows、Mac、web 上的 Word 等）上的同一文档返回完全相同的 HTML。 如果您需要完全保真度或跨平台的一致性，请`Body.getOoxml()`使用并将返回的 XML 转换为 HTML。
+      获取 body 对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式设置完全匹配，但不完全匹配。 此方法不会为不同平台（Windows、Mac、web 上的 Word 等）上的同一文档返回完全相同的 HTML。 如果您需要完全保真度或跨平台的一致性，请使用 `Body.getOoxml()` 并将返回的 XML 转换为 HTML。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getHtml()
@@ -320,11 +320,11 @@ items:
           ```
       parameters:
         - id: breakType
-          description: 必需。 要添加到正文的分隔符类型。
+          description: 必填。 要添加到正文的分隔符类型。
           type:
             - 'word!Word.BreakType:enum'
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertBreak:member(2)'
@@ -345,11 +345,11 @@ items:
         description: ''
       parameters:
         - id: breakTypeString
-          description: 必需。 要添加到正文的分隔符类型。
+          description: 必填。 要添加到正文的分隔符类型。
           type:
             - '"Page" | "Next" | "SectionNext" | "SectionContinuous" | "SectionEven" | "SectionOdd" | "Line"'
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertContentControl:member(1)'
@@ -441,7 +441,7 @@ items:
           ```
       parameters:
         - id: base64File
-          description: 必需。 .Docx 文件的 base64 编码内容。
+          description: 必填。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocation
@@ -466,7 +466,7 @@ items:
         description: ''
       parameters:
         - id: base64File
-          description: 必需。 .Docx 文件的 base64 编码内容。
+          description: 必填。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocationString
@@ -519,7 +519,7 @@ items:
           ```
       parameters:
         - id: html
-          description: 必需。 要插入到文档中的 HTML。
+          description: 必填。 要插入到文档中的 HTML。
           type:
             - string
         - id: insertLocation
@@ -544,7 +544,7 @@ items:
         description: ''
       parameters:
         - id: html
-          description: 必需。 要插入到文档中的 HTML。
+          description: 必填。 要插入到文档中的 HTML。
           type:
             - string
         - id: insertLocationString
@@ -569,7 +569,7 @@ items:
         description: ''
       parameters:
         - id: ooxml
-          description: 必需。 要插入的 OOXML。
+          description: 必填。 要插入的 OOXML。
           type:
             - string
         - id: insertLocation
@@ -594,7 +594,7 @@ items:
         description: ''
       parameters:
         - id: ooxml
-          description: 必需。 要插入的 OOXML。
+          description: 必填。 要插入的 OOXML。
           type:
             - string
         - id: insertLocationString
@@ -649,11 +649,11 @@ items:
           ```
       parameters:
         - id: paragraphText
-          description: 必需。 要插入的段落文本。
+          description: 必填。 要插入的段落文本。
           type:
             - string
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertParagraph:member(2)'
@@ -674,11 +674,11 @@ items:
         description: ''
       parameters:
         - id: paragraphText
-          description: 必需。 要插入的段落文本。
+          description: 必填。 要插入的段落文本。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertText:member(1)'
@@ -726,11 +726,11 @@ items:
           ```
       parameters:
         - id: text
-          description: 必需。 要插入的文本。
+          description: 必填。 要插入的文本。
           type:
             - string
         - id: insertLocation
-          description: 必需。 此值可以为“Replace”、“Start”或“End”。
+          description: 必填。 此值可以为“Replace”、“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertText:member(2)'
@@ -751,11 +751,11 @@ items:
         description: ''
       parameters:
         - id: text
-          description: 必需。 要插入的文本。
+          description: 必填。 要插入的文本。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Replace”、“Start”或“End”。
+          description: 必填。 此值可以为“Replace”、“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#load:member(1)'
@@ -785,7 +785,7 @@ items:
           type:
             - 'word!Word.Interfaces.BodyLoadOptions:interface'
   - uid: 'word!Word.Body#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -803,7 +803,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'word!Word.Body#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -1196,7 +1196,7 @@ items:
           });
           ```
   - uid: 'word!Word.Body#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 "Body" 对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Word.Interfaces.BodyData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 "Body" 对象是 API 对象，但 `toJSON` 方法返回一个简单的 JavaScript 对象（类型为`Word.Interfaces.BodyData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
