--- a/docs/docs-ref-autogen/word/word/word.body.yml
+++ b/docs/docs-ref-autogen/word/word/word.body.yml
@@ -191,7 +191,7 @@ items:
           ```
   - uid: 'word!Word.Body#getHtml:member(1)'
     summary: |-
-      获取 body 对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式设置完全匹配，但不完全匹配。 此方法不会为不同平台（Windows、Mac、web 上的 Word 等）上的同一文档返回完全相同的 HTML。 如果您需要完全保真度或跨平台的一致性，请`Body.getOoxml()`使用并将返回的 XML 转换为 HTML。
+      获取 body 对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式设置完全匹配，但不完全匹配。 此方法不会为不同平台（Windows、Mac、web 上的 Word 等）上的同一文档返回完全相同的 HTML。 如果您需要完全保真度或跨平台的一致性，请使用 `Body.getOoxml()` 并将返回的 XML 转换为 HTML。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getHtml()
@@ -377,11 +377,11 @@ items:
           ```
       parameters:
         - id: breakType
-          description: 必需。 要添加到正文的分隔符类型。
+          description: 必填。 要添加到正文的分隔符类型。
           type:
             - 'word!Word.BreakType:enum'
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertBreak:member(2)'
@@ -402,11 +402,11 @@ items:
         description: ''
       parameters:
         - id: breakTypeString
-          description: 必需。 要添加到正文的分隔符类型。
+          description: 必填。 要添加到正文的分隔符类型。
           type:
             - '"Page" | "Next" | "SectionNext" | "SectionContinuous" | "SectionEven" | "SectionOdd" | "Line"'
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertContentControl:member(1)'
@@ -498,7 +498,7 @@ items:
           ```
       parameters:
         - id: base64File
-          description: 必需。 .Docx 文件的 base64 编码内容。
+          description: 必填。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocation
@@ -523,7 +523,7 @@ items:
         description: ''
       parameters:
         - id: base64File
-          description: 必需。 .Docx 文件的 base64 编码内容。
+          description: 必填。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocationString
@@ -576,7 +576,7 @@ items:
           ```
       parameters:
         - id: html
-          description: 必需。 要插入到文档中的 HTML。
+          description: 必填。 要插入到文档中的 HTML。
           type:
             - string
         - id: insertLocation
@@ -601,7 +601,7 @@ items:
         description: ''
       parameters:
         - id: html
-          description: 必需。 要插入到文档中的 HTML。
+          description: 必填。 要插入到文档中的 HTML。
           type:
             - string
         - id: insertLocationString
@@ -659,11 +659,11 @@ items:
           ```
       parameters:
         - id: base64EncodedImage
-          description: 必需。 将 base64 编码的图像插入正文中。
+          description: 必填。 将 base64 编码的图像插入正文中。
           type:
             - string
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertInlinePictureFromBase64:member(2)'
@@ -684,11 +684,11 @@ items:
         description: ''
       parameters:
         - id: base64EncodedImage
-          description: 必需。 将 base64 编码的图像插入正文中。
+          description: 必填。 将 base64 编码的图像插入正文中。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertOoxml:member(1)'
@@ -709,7 +709,7 @@ items:
         description: ''
       parameters:
         - id: ooxml
-          description: 必需。 要插入的 OOXML。
+          description: 必填。 要插入的 OOXML。
           type:
             - string
         - id: insertLocation
@@ -734,11 +734,11 @@ items:
         description: ''
       parameters:
         - id: ooxml
-          description: 必需。 要插入的 OOXML。
+          description: 必填。 要插入的 OOXML。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Replace”、“Start”或“End”。
+          description: 必填。 此值可以为“Replace”、“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertParagraph:member(1)'
@@ -789,11 +789,11 @@ items:
           ```
       parameters:
         - id: paragraphText
-          description: 必需。 要插入的段落文本。
+          description: 必填。 要插入的段落文本。
           type:
             - string
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertParagraph:member(2)'
@@ -814,11 +814,11 @@ items:
         description: ''
       parameters:
         - id: paragraphText
-          description: 必需。 要插入的段落文本。
+          description: 必填。 要插入的段落文本。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertTable:member(1)'
@@ -858,15 +858,15 @@ items:
           ```
       parameters:
         - id: rowCount
-          description: 必需。 表格的行数。
+          description: 必填。 表格的行数。
           type:
             - number
         - id: columnCount
-          description: 必需。 表格的列数。
+          description: 必填。 表格的列数。
           type:
             - number
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
         - id: values
@@ -891,15 +891,15 @@ items:
         description: ''
       parameters:
         - id: rowCount
-          description: 必需。 表格的行数。
+          description: 必填。 表格的行数。
           type:
             - number
         - id: columnCount
-          description: 必需。 表格的列数。
+          description: 必填。 表格的列数。
           type:
             - number
         - id: insertLocationString
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
         - id: values
@@ -951,11 +951,11 @@ items:
           ```
       parameters:
         - id: text
-          description: 必需。 要插入的文本。
+          description: 必填。 要插入的文本。
           type:
             - string
         - id: insertLocation
-          description: 必需。 此值可以为“Replace”、“Start”或“End”。
+          description: 必填。 此值可以为“Replace”、“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertText:member(2)'
@@ -976,11 +976,11 @@ items:
         description: ''
       parameters:
         - id: text
-          description: 必需。 要插入的文本。
+          description: 必填。 要插入的文本。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Replace”、“Start”或“End”。
+          description: 必填。 此值可以为“Replace”、“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#lists:member'
@@ -1025,7 +1025,7 @@ items:
           type:
             - 'word!Word.Interfaces.BodyLoadOptions:interface'
   - uid: 'word!Word.Body#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -1043,7 +1043,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'word!Word.Body#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -1541,7 +1541,7 @@ items:
           });
           ```
   - uid: 'word!Word.Body#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 "Body" 对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Word.Interfaces.BodyData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 "Body" 对象是 API 对象，但 `toJSON` 方法返回一个简单的 JavaScript 对象（类型为`Word.Interfaces.BodyData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
