--- a/docs/docs-ref-autogen/word_1_2/word/word.contentcontrolcollection.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.contentcontrolcollection.yml
@@ -83,7 +83,7 @@ items:
           ```
       parameters:
         - id: id
-          description: 必需。 内容控件的标识符。
+          description: 必填。 内容控件的标识符。
           type:
             - number
   - uid: 'word!Word.ContentControlCollection#getByTag:member(1)'
@@ -123,7 +123,7 @@ items:
           ```
       parameters:
         - id: tag
-          description: 必需。 在内容控件上设置的标记。
+          description: 必填。 在内容控件上设置的标记。
           type:
             - string
   - uid: 'word!Word.ContentControlCollection#getByTitle:member(1)'
@@ -317,7 +317,7 @@ items:
           type:
             - 'word!Word.ContentControlCollection#load~0:complex'
   - uid: 'word!Word.ContentControlCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -352,7 +352,7 @@ items:
           type:
             - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'word!Word.ContentControlCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Word.ContentControlCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.ContentControlCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 `Word.ContentControlCollection` 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.ContentControlCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
