--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.messageread.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.messageread.yml
@@ -10,7 +10,7 @@ items:
 
       - [ItemRead](xref:outlook!Office.ItemRead:interface)
 
-      - [邮件](xref:outlook!Office.Message:interface)
+      - [消息](xref:outlook!Office.Message:interface)
     name: Office.MessageRead
     fullName: Office.MessageRead
     langs:
@@ -67,7 +67,7 @@ items:
     summary: |-
       添加支持事件的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      若要查看受支持的事件类型，请参阅 `Office.EventType` 了解详细信息。
+      有关受支持的事件，请参阅 Item object model [events 部分](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.8/office.context.mailbox.item#events)。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -106,7 +106,7 @@ items:
     summary: |-
       添加支持事件的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      若要查看受支持的事件类型，请参阅 `Office.EventType` 了解详细信息。
+      有关受支持的事件，请参阅 Item object model [events 部分](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.8/office.context.mailbox.item#events)。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1012,7 +1012,7 @@ items:
 
             使用此方法的最小权限级别是`Restricted`<!-- -->，需要访问一些实体类型 `ReadItem` ，如下表所示。
 
-            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
+            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>String</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
           type:
             - 'outlook!Office.MessageRead#getEntitiesByType~1:complex'
   - uid: 'outlook!Office.MessageRead#getFilteredEntitiesByName:member(1)'
@@ -1781,7 +1781,7 @@ items:
     summary: |-
       删除受支持事件类型的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      若要查看受支持的事件类型，请参阅 `Office.EventType` 了解详细信息。
+      有关受支持的事件，请参阅 Item object model [events 部分](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.8/office.context.mailbox.item#events)。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1816,7 +1816,7 @@ items:
     summary: |-
       删除受支持事件类型的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      若要查看受支持的事件类型，请参阅 `Office.EventType` 了解详细信息。
+      有关受支持的事件，请参阅 Item object model [events 部分](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.8/office.context.mailbox.item#events)。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
