--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.messagecompose.yml
@@ -10,7 +10,7 @@ items:
 
       - [ItemCompose](xref:outlook!Office.ItemCompose:interface)
 
-      - [邮件](xref:outlook!Office.Message:interface)
+      - [消息](xref:outlook!Office.Message:interface)
     name: Office.MessageCompose
     fullName: Office.MessageCompose
     langs:
@@ -200,7 +200,7 @@ items:
     summary: |-
       添加支持事件的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      若要查看受支持的事件类型，请参阅 `Office.EventType` 了解详细信息。
+      有关受支持的事件，请参阅 Item object model [events 部分](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.7/office.context.mailbox.item#events)。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -239,7 +239,7 @@ items:
     summary: |-
       添加支持事件的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      若要查看受支持的事件类型，请参阅 `Office.EventType` 了解详细信息。
+      有关受支持的事件，请参阅 Item object model [events 部分](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.7/office.context.mailbox.item#events)。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1064,7 +1064,7 @@ items:
     summary: |-
       删除受支持事件类型的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      若要查看受支持的事件类型，请参阅 `Office.EventType` 了解详细信息。
+      有关受支持的事件，请参阅 Item object model [events 部分](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.7/office.context.mailbox.item#events)。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1099,7 +1099,7 @@ items:
     summary: |-
       删除受支持事件类型的事件处理程序。 **注意**：事件仅在任务窗格中可用。
 
-      若要查看受支持的事件类型，请参阅 `Office.EventType` 了解详细信息。
+      有关受支持的事件，请参阅 Item object model [events 部分](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.7/office.context.mailbox.item#events)。
 
       \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
