commit translated contents

--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.mailbox.yml
@@ -359,11 +359,11 @@ items:
 
       `displayAppointmentForm` 方法将打开桌面新窗口中或移动设备对话框中的现有日历约会。
 
-      在 Mac 版 Outlook 中，可以使用此方法来显示不属于重复时序的一个约会，或显示重复时序的主约会，但无法显示重复时序的实例。这是因为在 Mac 版 Outlook 中，无法访问重复时序的实例属性（包括项 ID）。
+      在 Mac 上的 Outlook 中，可以使用此方法显示不属于定期系列或定期系列的主约会的单个约会。 但是，无法显示该系列的实例，因为您无法访问定期系列的实例的属性（包括项目 ID）。
 
-      在 Outlook 网页版中，此方法仅在窗体正文的字符数小于或等于 32KB 时，才会打开指定的窗体。
+      在 web 上的 Outlook 中，仅当窗体的正文小于或等于32K 个字符时，此方法才会打开指定的窗体。
 
-      如果指定的项标识符没有识别现有约会，将在客户端计算机或设备上打开一个空白窗格，并且不会返回错误消息。
+      如果指定的项标识符未标识现有约会，则在客户端计算机或设备上打开一个空白窗格，并且不会返回任何错误消息。
 
       **注意**：在 IOS 或 Android 上的 Outlook 中不支持此方法。
     remarks: |-
@@ -400,9 +400,9 @@ items:
 
       `displayMessageForm` 方法将打开桌面新窗口中或移动设备对话框中的现有邮件。
 
-      在 Outlook 网页版中，此方法仅在窗体正文的字符数小于或等于 32KB 时，才会打开指定的窗体。
+      在 web 上的 Outlook 中，仅当窗体的正文小于或等于32K 个字符时，此方法才会打开指定的窗体。
 
-      如果指定的项标识符未识别现有消息，则客户端计算机上不会显示任何消息，并且也不会返回错误消息。
+      如果指定的项标识符未标识现有邮件，则客户端计算机上将不会显示任何消息，并且不会返回任何错误消息。
 
       请勿将 `displayMessageForm` 和与代表约会的 itemId 结合使用。 使用 `displayAppointmentForm` 方法显示现有的约会，并使用 `displayNewAppointmentForm` 显示窗体以新建约会。
 
@@ -439,7 +439,7 @@ items:
     summary: |-
       显示用于新建日历约会的表单。
 
-      `displayNewAppointmentForm` 方法打开可让用户新建约会或会议的窗体。如果指定了参数，将使用参数的内容自动填充约会窗体字段。
+      The `displayNewAppointmentForm` method opens a form that enables the user to create a new appointment or meeting. If parameters are specified, the appointment form fields are automatically populated with the contents of the parameters.
 
       在 web 上的 Outlook 中，此方法始终显示一个包含 "与会者" 字段的窗体。 如果你未将任何与会者指定为输入参数，该方法将显示为一个包含“**保存**”按钮的窗体。 如果已指定与会者，窗体将包含与会者和“**发送**”按钮。
 
@@ -608,8 +608,7 @@ items:
     summary: |-
       获取一个包含用于调用 REST API 或 Exchange Web 服务的令牌的字符串。
 
-
-                  `getCallbackTokenAsync` 方法进行异步调用，从托管用户邮箱的 Exchange Server 获取非跳转令牌。回调令牌的生存期为 5 分钟。
+      The `getCallbackTokenAsync` method makes an asynchronous call to get an opaque token from the Exchange Server that hosts the user's mailbox. The lifetime of the callback token is 5 minutes.
 
       令牌作为属性中的字符串返回 `asyncResult.value` 。
 
@@ -700,7 +699,7 @@ items:
     summary: |-
       获取一个字符串，其中包含用于从 Exchange Server 获取附件或项目的令牌。
 
-      `getCallbackTokenAsync` 方法进行异步调用，从托管用户邮箱的 Exchange Server 获取非跳转令牌。回调令牌的生存期为 5 分钟。
+      The `getCallbackTokenAsync` method makes an asynchronous call to get an opaque token from the Exchange Server that hosts the user's mailbox. The lifetime of the callback token is 5 minutes.
 
       令牌作为属性中的字符串返回 `asyncResult.value` 。
 
