--- a/docs/docs-ref-autogen/outlook/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.mailbox.yml
@@ -30,9 +30,13 @@ items:
       - 'outlook!Office.Mailbox#convertToUtcClientTime:member(1)'
       - 'outlook!Office.Mailbox#diagnostics:member'
       - 'outlook!Office.Mailbox#displayAppointmentForm:member(1)'
+      - 'outlook!Office.Mailbox#displayAppointmentFormAsync:member(1)'
       - 'outlook!Office.Mailbox#displayMessageForm:member(1)'
+      - 'outlook!Office.Mailbox#displayMessageFormAsync:member(1)'
       - 'outlook!Office.Mailbox#displayNewAppointmentForm:member(1)'
+      - 'outlook!Office.Mailbox#displayNewAppointmentFormAsync:member(1)'
       - 'outlook!Office.Mailbox#displayNewMessageForm:member(1)'
+      - 'outlook!Office.Mailbox#displayNewMessageFormAsync:member(1)'
       - 'outlook!Office.Mailbox#ewsUrl:member'
       - 'outlook!Office.Mailbox#getCallbackTokenAsync:member(1)'
       - 'outlook!Office.Mailbox#getCallbackTokenAsync:member(2)'
@@ -359,11 +363,11 @@ items:
 
       `displayAppointmentForm` 方法将打开桌面新窗口中或移动设备对话框中的现有日历约会。
 
-      在 Mac 版 Outlook 中，可以使用此方法来显示不属于重复时序的一个约会，或显示重复时序的主约会，但无法显示重复时序的实例。这是因为在 Mac 版 Outlook 中，无法访问重复时序的实例属性（包括项 ID）。
+      在 Mac 上的 Outlook 中，可以使用此方法显示不属于定期系列或定期系列的主约会的单个约会。 但是，无法显示该系列的实例，因为您无法访问定期系列的实例的属性（包括项目 ID）。
 
-      在 Outlook 网页版中，此方法仅在窗体正文的字符数小于或等于 32KB 时，才会打开指定的窗体。
+      在 web 上的 Outlook 中，仅当窗体的正文小于或等于32K 个字符时，此方法才会打开指定的窗体。
 
-      如果指定的项标识符没有识别现有约会，将在客户端计算机或设备上打开一个空白窗格，并且不会返回错误消息。
+      如果指定的项标识符未标识现有约会，则在客户端计算机或设备上打开一个空白窗格，并且不会返回任何错误消息。
 
       **注意**：在 IOS 或 Android 上的 Outlook 中不支持此方法。
     remarks: |-
@@ -394,15 +398,59 @@ items:
           description: 现有日历约会的 Exchange Web 服务 (EWS) 标识符。
           type:
             - string
+  - uid: 'outlook!Office.Mailbox#displayAppointmentFormAsync:member(1)'
+    summary: |-
+      显示现有日历约会。
+
+      `displayAppointmentFormAsync` 方法将打开桌面新窗口中或移动设备对话框中的现有日历约会。
+
+      在 Mac 上的 Outlook 中，可以使用此方法显示不属于定期系列或定期系列的主约会的单个约会。 但是，无法显示该系列的实例，因为您无法访问定期系列的实例的属性（包括项目 ID）。
+
+      在 web 上的 Outlook 中，仅当窗体的正文小于或等于32K 个字符时，此方法才会打开指定的窗体。
+
+      如果指定的项标识符未标识现有约会，则在客户端计算机或设备上打开一个空白窗格，并且不会返回任何错误消息。
+
+      **注意**：在 IOS 或 Android 上的 Outlook 中不支持此方法。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
+    isPreview: true
+    name: 'displayAppointmentFormAsync(itemId, options, callback)'
+    fullName: 'displayAppointmentFormAsync(itemId, options, callback)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'displayAppointmentFormAsync(itemId: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: itemId
+          description: 现有日历约会的 Exchange Web 服务 (EWS) 标识符。
+          type:
+            - string
+        - id: options
+          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+          type:
+            - 'office!Office.AsyncContextOptions:interface'
+        - id: callback
+          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。`asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          type:
+            - 'outlook!Office.Mailbox#displayAppointmentFormAsync~0:complex'
   - uid: 'outlook!Office.Mailbox#displayMessageForm:member(1)'
     summary: |-
       显示现有邮件。
 
       `displayMessageForm` 方法将打开桌面新窗口中或移动设备对话框中的现有邮件。
 
-      在 Outlook 网页版中，此方法仅在窗体正文的字符数小于或等于 32KB 时，才会打开指定的窗体。
+      在 web 上的 Outlook 中，仅当窗体的正文小于或等于32K 个字符时，此方法才会打开指定的窗体。
 
-      如果指定的项标识符未识别现有消息，则客户端计算机上不会显示任何消息，并且也不会返回错误消息。
+      如果指定的项标识符未标识现有邮件，则客户端计算机上将不会显示任何消息，并且不会返回任何错误消息。
 
       请勿将 `displayMessageForm` 和与代表约会的 itemId 结合使用。 使用 `displayAppointmentForm` 方法显示现有的约会，并使用 `displayNewAppointmentForm` 显示窗体以新建约会。
 
@@ -435,11 +483,55 @@ items:
           description: 现有消息的 Exchange Web 服务 (EWS) 标识符。
           type:
             - string
+  - uid: 'outlook!Office.Mailbox#displayMessageFormAsync:member(1)'
+    summary: |-
+      显示现有邮件。
+
+      `displayMessageFormAsync` 方法将打开桌面新窗口中或移动设备对话框中的现有邮件。
+
+      在 web 上的 Outlook 中，仅当窗体的正文小于或等于32K 个字符时，此方法才会打开指定的窗体。
+
+      如果指定的项标识符未标识现有邮件，则客户端计算机上将不会显示任何消息，并且不会返回任何错误消息。
+
+      请勿将 `displayMessageForm` or `displayMessageFormAsync` 方法与代表约会的 itemId 一起使用。 使用 `displayAppointmentForm` 或 `displayAppointmentFormAsync` 方法显示现有约会，并使用或 `displayNewAppointmentForm` `displayNewAppointmentFormAsync` 显示创建新约会的窗体。
+
+      **注意**：在 IOS 或 Android 上的 Outlook 中不支持此方法。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
+    isPreview: true
+    name: 'displayMessageFormAsync(itemId, options, callback)'
+    fullName: 'displayMessageFormAsync(itemId, options, callback)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'displayMessageFormAsync(itemId: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: itemId
+          description: 现有消息的 Exchange Web 服务 (EWS) 标识符。
+          type:
+            - string
+        - id: options
+          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+          type:
+            - 'office!Office.AsyncContextOptions:interface'
+        - id: callback
+          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。`asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          type:
+            - 'outlook!Office.Mailbox#displayMessageFormAsync~0:complex'
   - uid: 'outlook!Office.Mailbox#displayNewAppointmentForm:member(1)'
     summary: |-
       显示用于新建日历约会的表单。
 
-      `displayNewAppointmentForm` 方法打开可让用户新建约会或会议的窗体。如果指定了参数，将使用参数的内容自动填充约会窗体字段。
+      The `displayNewAppointmentForm` method opens a form that enables the user to create a new appointment or meeting. If parameters are specified, the appointment form fields are automatically populated with the contents of the parameters.
 
       在 web 上的 Outlook 中，此方法始终显示一个包含 "与会者" 字段的窗体。 如果你未将任何与会者指定为输入参数，该方法将显示为一个包含“**保存**”按钮的窗体。 如果已指定与会者，窗体将包含与会者和“**发送**”按钮。
 
@@ -489,6 +581,50 @@ items:
           description: 一个 `AppointmentForm` 描述新约会的。 所有属性都是可选的。
           type:
             - 'outlook!Office.AppointmentForm:interface'
+  - uid: 'outlook!Office.Mailbox#displayNewAppointmentFormAsync:member(1)'
+    summary: |-
+      显示用于新建日历约会的表单。
+
+      The `displayNewAppointmentFormAsync` method opens a form that enables the user to create a new appointment or meeting. If parameters are specified, the appointment form fields are automatically populated with the contents of the parameters.
+
+      在 web 上的 Outlook 中，此方法始终显示一个包含 "与会者" 字段的窗体。 如果你未将任何与会者指定为输入参数，该方法将显示为一个包含“**保存**”按钮的窗体。 如果已指定与会者，窗体将包含与会者和“**发送**”按钮。
+
+      在 Outlook 富客户端和 Outlook RT 中，如果您在中指定任何与会者或资源`requiredAttendees`<!-- -->, `optionalAttendees`<!-- -->或 `resources` 参数，此方法显示带有 "**发送**" 按钮的会议窗体。 如果不指定任何收件人，此方法将显示带有 "**保存 &amp; 关闭**" 按钮的约会窗体。
+
+      如果任何参数超过指定大小限制，或者指定了未知参数名称，则会引发异常。
+
+      **注意**：在 IOS 或 Android 上的 Outlook 中不支持此方法。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：读取
+    isPreview: true
+    name: 'displayNewAppointmentFormAsync(parameters, options, callback)'
+    fullName: 'displayNewAppointmentFormAsync(parameters, options, callback)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'displayNewAppointmentFormAsync(parameters: AppointmentForm, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: parameters
+          description: 一个 `AppointmentForm` 描述新约会的。 所有属性都是可选的。
+          type:
+            - 'outlook!Office.AppointmentForm:interface'
+        - id: options
+          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+          type:
+            - 'office!Office.AsyncContextOptions:interface'
+        - id: callback
+          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。`asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          type:
+            - 'outlook!Office.Mailbox#displayNewAppointmentFormAsync~0:complex'
   - uid: 'outlook!Office.Mailbox#displayNewMessageForm:member(1)'
     summary: |-
       显示用于创建新邮件的窗体。
@@ -563,6 +699,67 @@ items:
             `attachments.itemId`<!-- -->：仅在 type 设置为 item 时使用。 要附加到新邮件的现有电子邮件的 EWS 项目 id。 字符串最长为 100 个字符。
           type:
             - any
+  - uid: 'outlook!Office.Mailbox#displayNewMessageFormAsync:member(1)'
+    summary: |-
+      显示用于创建新邮件的窗体。
+
+      `displayNewMessageFormAsync`方法将打开一个窗体，使用户可以创建新邮件。 如果指定了参数，则将使用参数的内容自动填充邮件窗体字段。
+
+      如果任何参数超过指定大小限制，或者指定了未知参数名称，则会引发异常。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：读取
+    isPreview: true
+    name: 'displayNewMessageFormAsync(parameters, options, callback)'
+    fullName: 'displayNewMessageFormAsync(parameters, options, callback)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'displayNewMessageFormAsync(parameters: any, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: parameters
+          description: |-
+            包含要为新表单中的用户填充的所有值的词典。 所有参数都是可选的。
+
+            `toRecipients`<!-- -->：包含电子邮件地址的字符串数组或包含 "收件人" 行中每个收件人的[EmailAddressDetails](xref:outlook!Office.EmailAddressDetails:interface)对象的数组。 数组限制为最多 100 个条目。
+
+            `ccRecipients`<!-- -->：包含电子邮件地址的字符串数组或包含 "抄送" 行上每个收件人的[EmailAddressDetails](xref:outlook!Office.EmailAddressDetails:interface)对象的数组。 数组限制为最多 100 个条目。
+
+            `bccRecipients`<!-- -->：包含电子邮件地址的字符串数组或包含 "密件抄送" 行上每个收件人的[EmailAddressDetails](xref:outlook!Office.EmailAddressDetails:interface)对象的数组。 数组限制为最多 100 个条目。
+
+            `subject`<!-- -->：包含邮件主题的字符串。 字符串长度限制为最多 255 个字符。
+
+            `htmlBody`<!-- -->：邮件的 HTML 正文。 正文内容限制为最大 32 KB。
+
+            `attachments`<!-- -->： JSON 对象的数组，这些对象为文件或项目附件。
+
+            `attachments.type`<!-- -->：指示附件的类型。 必须是文件附件的文件或项目附件的项目。
+
+            `attachments.name`<!-- -->：一个字符串，其中包含附件的名称，最长为255个字符。
+
+            `attachments.url`<!-- -->：仅当类型设置为 "文件" 时才使用。 文件的位置的 URI。
+
+            `attachments.isInline`<!-- -->：仅当类型设置为 "文件" 时才使用。 如果为 true，则表示附件将在邮件正文中以内联方式显示，并且不应显示在附件列表中。
+
+            `attachments.itemId`<!-- -->：仅在 type 设置为 item 时使用。 要附加到新邮件的现有电子邮件的 EWS 项目 id。 字符串最长为 100 个字符。
+          type:
+            - any
+        - id: options
+          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+          type:
+            - 'office!Office.AsyncContextOptions:interface'
+        - id: callback
+          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。`asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          type:
+            - 'outlook!Office.Mailbox#displayNewMessageFormAsync~0:complex'
   - uid: 'outlook!Office.Mailbox#ewsUrl:member'
     summary: |-
       获取此电子邮件帐户的 Exchange Web Services (EWS) 终点的 URL。 仅限阅读模式。
@@ -608,8 +805,7 @@ items:
     summary: |-
       获取一个包含用于调用 REST API 或 Exchange Web 服务的令牌的字符串。
 
-
-                  `getCallbackTokenAsync` 方法进行异步调用，从托管用户邮箱的 Exchange Server 获取非跳转令牌。回调令牌的生存期为 5 分钟。
+      The `getCallbackTokenAsync` method makes an asynchronous call to get an opaque token from the Exchange Server that hosts the user's mailbox. The lifetime of the callback token is 5 minutes.
 
       令牌作为属性中的字符串返回 `asyncResult.value` 。
 
@@ -700,7 +896,7 @@ items:
     summary: |-
       获取一个字符串，其中包含用于从 Exchange Server 获取附件或项目的令牌。
 
-      `getCallbackTokenAsync` 方法进行异步调用，从托管用户邮箱的 Exchange Server 获取非跳转令牌。回调令牌的生存期为 5 分钟。
+      The `getCallbackTokenAsync` method makes an asynchronous call to get an opaque token from the Exchange Server that hosts the user's mailbox. The lifetime of the callback token is 5 minutes.
 
       令牌作为属性中的字符串返回 `asyncResult.value` 。
 
@@ -1268,8 +1464,52 @@ references:
         fullName: ' | string'
   - uid: 'outlook!Office.Diagnostics:interface'
     name: Diagnostics
+  - uid: 'outlook!Office.Mailbox#displayAppointmentFormAsync~0:complex'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
+    spec.typeScript:
+      - name: '(asyncResult: '
+        fullName: '(asyncResult: '
+      - uid: 'office!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
+  - uid: 'outlook!Office.Mailbox#displayMessageFormAsync~0:complex'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
+    spec.typeScript:
+      - name: '(asyncResult: '
+        fullName: '(asyncResult: '
+      - uid: 'office!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
   - uid: 'outlook!Office.AppointmentForm:interface'
     name: AppointmentForm
+  - uid: 'outlook!Office.Mailbox#displayNewAppointmentFormAsync~0:complex'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
+    spec.typeScript:
+      - name: '(asyncResult: '
+        fullName: '(asyncResult: '
+      - uid: 'office!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
+  - uid: 'outlook!Office.Mailbox#displayNewMessageFormAsync~0:complex'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
+    spec.typeScript:
+      - name: '(asyncResult: '
+        fullName: '(asyncResult: '
+      - uid: 'office!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
   - uid: 'outlook!Office.Mailbox#getCallbackTokenAsync~0:complex'
     name: 'Office.AsyncContextOptions & { isRest?: boolean }'
     fullName: 'Office.AsyncContextOptions & { isRest?: boolean }'
