--- a/docs/docs-ref-autogen/outlook_1_2/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/outlook/office.mailbox.yml
@@ -12,9 +12,9 @@ items:
 
       - `userProfile`<!-- -->：提供有关 Outlook 外接程序中的用户的信息。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`Restricted`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`Restricted`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
     name: Office.Mailbox
     fullName: Office.Mailbox
     langs:
@@ -40,11 +40,11 @@ items:
 
       Outlook 网页版或桌面客户端上的邮件应用程序使用的日期和时间可以使用不同的时区。 Outlook 使用客户端计算机时区;Web 上的 Outlook 使用 Exchange 管理中心（EAC）上设置的时区。 应对日期和时间值进行处理，以便用户界面上显示的值始终与用户预期的时区一致。
 
-      如果邮件应用程序在桌面客户端上的 Outlook 中运行`convertToLocalClientTime` ，则该方法将返回一个 dictionary 对象，并将值设置为客户端计算机时区。 如果邮件应用程序在 web 上的 Outlook 中运行，则`convertToLocalClientTime`该方法将返回一个 dictionary 对象，其中的值设置为 EAC 中指定的时区。
+      如果邮件应用程序在桌面客户端上的 Outlook 中运行，则该 `convertToLocalClientTime` 方法将返回一个 dictionary 对象，并将值设置为客户端计算机时区。 如果邮件应用程序在 web 上的 Outlook 中运行，则该 `convertToLocalClientTime` 方法将返回一个 dictionary 对象，其中的值设置为 EAC 中指定的时区。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
     name: convertToLocalClientTime(timeValue)
     fullName: convertToLocalClientTime(timeValue)
     langs:
@@ -63,13 +63,13 @@ items:
             - '!Date:interface'
   - uid: 'outlook!Office.Mailbox#convertToUtcClientTime:member(1)'
     summary: |-
-      从包含`Date`时间信息的字典中获取对象。
+      `Date`从包含时间信息的字典中获取对象。
 
-      该`convertToUtcClientTime`方法将包含本地日期和时间的字典转换为具有`Date`本地日期和时间的正确值的对象。
+      该 `convertToUtcClientTime` 方法将包含本地日期和时间的字典转换为 `Date` 具有本地日期和时间的正确值的对象。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
       #### <a name="examples"></a>示例
 
@@ -116,15 +116,15 @@ items:
 
       - `hostName`（字符串）：一个表示主机应用程序的名称的字符串。 它应为下列值之一：`Outlook`<!-- -->, `OutlookWebApp`<!-- -->, `OutlookIOS`<!-- -->，或者`OutlookAndroid`<!-- -->. **注意**：针对桌面客户端（即 Windows 和 Mac）上的 outlook 返回了 "outlook" 值。
 
-      - `hostVersion`（字符串）：表示主机应用程序或 Exchange 服务器的版本的字符串（例如，"15.0.468.0"）。 如果邮件外接程序在桌面或移动客户端上的 Outlook 中运行， `hostVersion`则该属性将返回主机应用程序（Outlook）的版本。 在 Outlook 网页版中，该属性返回的是 Exchange 服务器的版本。
+      - `hostVersion`（字符串）：表示主机应用程序或 Exchange 服务器的版本的字符串（例如，"15.0.468.0"）。 如果邮件外接程序在桌面或移动客户端上的 Outlook 中运行，则该 `hostVersion` 属性将返回主机应用程序（Outlook）的版本。 在 Outlook 网页版中，该属性返回的是 Exchange 服务器的版本。
 
-      - `OWAView`（`MailboxEnums.OWAView`或字符串）：代表 web 上的 Outlook 当前视图的枚举（或字符串文字）。 如果主机应用程序不是 web 上的 Outlook，则访问此属性将导致未定义。 Web 上的 Outlook 具有三个视图`OneColumn` （当`TwoColumns`屏幕变宽`ThreeColumns`时显示; 当屏幕宽时显示; 当屏幕为宽时显示）与屏幕和窗口的宽度以及可以显示的列数相对应。
+      - `OWAView`（ `MailboxEnums.OWAView` 或字符串）：代表 web 上的 Outlook 当前视图的枚举（或字符串文字）。 如果主机应用程序不是 web 上的 Outlook，则访问此属性将导致未定义。 Web 上的 Outlook 具有三个视图（当屏幕变宽时显示; 当屏幕宽时显示; 当屏幕 `OneColumn` `TwoColumns` 为宽时显示）与 `ThreeColumns` 屏幕和窗口的宽度以及可以显示的列数相对应。
 
       有关详细信息，请与[Office 诊断](xref:outlook!Office.Diagnostics:interface)<!-- -->.
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
     name: diagnostics
     fullName: diagnostics
     langs:
@@ -141,17 +141,17 @@ items:
 
       `displayAppointmentForm` 方法将打开桌面新窗口中或移动设备对话框中的现有日历约会。
 
-      在 Mac 版 Outlook 中，可以使用此方法来显示不属于重复时序的一个约会，或显示重复时序的主约会，但无法显示重复时序的实例。这是因为在 Mac 版 Outlook 中，无法访问重复时序的实例属性（包括项 ID）。
+      在 Mac 上的 Outlook 中，可以使用此方法显示不属于定期系列或定期系列的主约会的单个约会。 但是，无法显示该系列的实例，因为您无法访问定期系列的实例的属性（包括项目 ID）。
 
-      在 Outlook 网页版中，此方法仅在窗体正文的字符数小于或等于 32KB 时，才会打开指定的窗体。
+      在 web 上的 Outlook 中，仅当窗体的正文小于或等于32K 个字符时，此方法才会打开指定的窗体。
 
-      如果指定的项标识符没有识别现有约会，将在客户端计算机或设备上打开一个空白窗格，并且不会返回错误消息。
+      如果指定的项标识符未标识现有约会，则在客户端计算机或设备上打开一个空白窗格，并且不会返回任何错误消息。
 
       **注意**：在 IOS 或 Android 上的 Outlook 中不支持此方法。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
       #### <a name="examples"></a>示例
 
@@ -182,17 +182,17 @@ items:
 
       `displayMessageForm` 方法将打开桌面新窗口中或移动设备对话框中的现有邮件。
 
-      在 Outlook 网页版中，此方法仅在窗体正文的字符数小于或等于 32KB 时，才会打开指定的窗体。
+      在 web 上的 Outlook 中，仅当窗体的正文小于或等于32K 个字符时，此方法才会打开指定的窗体。
 
-      如果指定的项标识符未识别现有消息，则客户端计算机上不会显示任何消息，并且也不会返回错误消息。
+      如果指定的项标识符未标识现有邮件，则客户端计算机上将不会显示任何消息，并且不会返回任何错误消息。
 
-      请勿将`displayMessageForm`和与代表约会的 itemId 结合使用。 使用 `displayAppointmentForm` 方法显示现有的约会，并使用 `displayNewAppointmentForm` 显示窗体以新建约会。
+      请勿将 `displayMessageForm` 和与代表约会的 itemId 结合使用。 使用 `displayAppointmentForm` 方法显示现有的约会，并使用 `displayNewAppointmentForm` 显示窗体以新建约会。
 
       **注意**：在 IOS 或 Android 上的 Outlook 中不支持此方法。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
       #### <a name="examples"></a>示例
 
@@ -221,19 +221,19 @@ items:
     summary: |-
       显示用于新建日历约会的表单。
 
-      `displayNewAppointmentForm` 方法打开可让用户新建约会或会议的窗体。如果指定了参数，将使用参数的内容自动填充约会窗体字段。
+      The `displayNewAppointmentForm` method opens a form that enables the user to create a new appointment or meeting. If parameters are specified, the appointment form fields are automatically populated with the contents of the parameters.
 
       在 web 上的 Outlook 中，此方法始终显示一个包含 "与会者" 字段的窗体。 如果你未将任何与会者指定为输入参数，该方法将显示为一个包含“**保存**”按钮的窗体。 如果已指定与会者，窗体将包含与会者和“**发送**”按钮。
 
-      在 Outlook 富客户端和 Outlook RT 中，如果您在中指定任何与会者或资源`requiredAttendees`<!-- -->, `optionalAttendees`<!-- -->或`resources`参数，此方法显示带有 "**发送**" 按钮的会议窗体。 如果不指定任何收件人，此方法将显示带有 "**保存&amp;关闭**" 按钮的约会窗体。
+      在 Outlook 富客户端和 Outlook RT 中，如果您在中指定任何与会者或资源`requiredAttendees`<!-- -->, `optionalAttendees`<!-- -->或 `resources` 参数，此方法显示带有 "**发送**" 按钮的会议窗体。 如果不指定任何收件人，此方法将显示带有 "**保存 &amp; 关闭**" 按钮的约会窗体。
 
       如果任何参数超过指定大小限制，或者指定了未知参数名称，则会引发异常。
 
       **注意**：在 IOS 或 Android 上的 Outlook 中不支持此方法。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：读取
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：读取
 
       #### <a name="examples"></a>示例
 
@@ -268,22 +268,22 @@ items:
         description: ''
       parameters:
         - id: parameters
-          description: 一个`AppointmentForm`描述新约会的。 所有属性都是可选的。
+          description: 一个 `AppointmentForm` 描述新约会的。 所有属性都是可选的。
           type:
             - 'outlook!Office.AppointmentForm:interface'
   - uid: 'outlook!Office.Mailbox#ewsUrl:member'
     summary: |-
       获取此电子邮件帐户的 Exchange Web Services (EWS) 终点的 URL。 仅限阅读模式。
 
-      您的应用程序必须`ReadItem`具有在其清单中指定的权限`ewsUrl` ，才能在阅读模式下调用成员。
+      您的应用程序必须具有在 `ReadItem` 其清单中指定的权限，才能 `ewsUrl` 在阅读模式下调用成员。
 
-      在撰写模式中，必须调用 `saveAsync` 方法，才能使用 `ewsUrl` 成员。 您的应用程序`ReadWriteItem`必须具有调用该`saveAsync`方法的权限。
+      在撰写模式中，必须调用 `saveAsync` 方法，才能使用 `ewsUrl` 成员。 您的应用程序必须具有 `ReadWriteItem` 调用该 `saveAsync` 方法的权限。
 
       **注意**：在 IOS 或 Android 上的 Outlook 中不支持此成员。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
       远程服务可使用 `ewsUrl` 值对用户邮箱进行 EWS 调用。 例如，可以创建远程服务以[从所选项目中获取附件](https://docs.microsoft.com/office/dev/add-ins/outlook/get-attachments-of-an-outlook-item)<!-- -->.
 
@@ -316,21 +316,21 @@ items:
     summary: |-
       获取一个字符串，其中包含用于从 Exchange Server 获取附件或项目的令牌。
 
-      `getCallbackTokenAsync` 方法进行异步调用，从托管用户邮箱的 Exchange Server 获取非跳转令牌。回调令牌的生存期为 5 分钟。
+      The `getCallbackTokenAsync` method makes an asynchronous call to get an opaque token from the Exchange Server that hosts the user's mailbox. The lifetime of the callback token is 5 minutes.
 
-      令牌作为`asyncResult.value`属性中的字符串返回。
+      令牌作为属性中的字符串返回 `asyncResult.value` 。
 
       可以将令牌和附件标识符或项标识符传递到第三方系统。 第三方系统使用令牌作为持有者身份验证令牌调用 Exchange Web 服务 (EWS) [GetAttachment](https://docs.microsoft.com/exchange/client-developer/web-service-reference/getattachment-operation) 操作或 [GetItem](https://docs.microsoft.com/exchange/client-developer/web-service-reference/getitem-operation) 操作，以返回附件或项目。 例如，可以创建远程服务以[从所选项目中获取附件](https://docs.microsoft.com/office/dev/add-ins/outlook/get-attachments-of-an-outlook-item)<!-- -->.
 
-      在读取`getCallbackTokenAsync`模式下调用方法要求最低权限级别为`ReadItem`<!-- -->.
+      `getCallbackTokenAsync`在读取模式下调用方法要求最低权限级别为`ReadItem`<!-- -->.
 
-      在撰写`getCallbackTokenAsync`模式下调用方法需要您保存项目。 `saveAsync`方法要求的最低权限级别为`ReadWriteItem`<!-- -->.
+      `getCallbackTokenAsync`在撰写模式下调用方法需要您保存项目。 `saveAsync`方法要求的最低权限级别为`ReadWriteItem`<!-- -->.
 
       \[[API 集： All 支持读取模式;邮箱1.3 引入了撰写模式支持](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
       **错误**：
 
@@ -372,7 +372,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->. 令牌作为`asyncResult.value`属性中的字符串返回。 如果出现错误，则 `asyncResult.error` 和 `asyncResult.diagnostics` 属性可能会提供其他信息。
+          description: 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->. 令牌作为属性中的字符串返回 `asyncResult.value` 。 如果出现错误，则 `asyncResult.error` 和 `asyncResult.diagnostics` 属性可能会提供其他信息。
           type:
             - 'outlook!Office.Mailbox#getCallbackTokenAsync~0:complex'
         - id: userContext
@@ -383,13 +383,13 @@ items:
     summary: |-
       获取用于标识用户和 Office 外接程序的令牌。
 
-      令牌作为`asyncResult.value`属性中的字符串返回。
+      令牌作为属性中的字符串返回 `asyncResult.value` 。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
-      该`getUserIdentityTokenAsync`方法返回一个令牌，可用于[通过第三方系统识别和验证外接程序和用户](https://docs.microsoft.com/office/dev/add-ins/outlook/authentication)<!-- -->.
+      该 `getUserIdentityTokenAsync` 方法返回一个令牌，可用于[通过第三方系统识别和验证外接程序和用户](https://docs.microsoft.com/office/dev/add-ins/outlook/authentication)<!-- -->.
 
       **错误**：
 
@@ -424,7 +424,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->. 令牌作为`asyncResult.value`属性中的字符串返回。 如果出现错误，则 `asyncResult.error` 和 `asyncResult.diagnostics` 属性可能会提供其他信息。
+          description: 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->. 令牌作为属性中的字符串返回 `asyncResult.value` 。 如果出现错误，则 `asyncResult.error` 和 `asyncResult.diagnostics` 属性可能会提供其他信息。
           type:
             - 'outlook!Office.Mailbox#getUserIdentityTokenAsync~0:complex'
         - id: userContext
@@ -458,7 +458,7 @@ items:
 
       XML 请求必须指定 UTF-8 编码：`\<?xml version="1.0" encoding="utf-8"?\>`<!-- -->.
 
-      您的`ReadWriteMailbox`外接程序必须具有使用方法的`makeEwsRequestAsync`权限。 有关使用可使用`ReadWriteMailbox` `makeEwsRequestAsync`方法调用的权限和 EWS 操作的信息，请参阅[指定邮件外接程序对用户邮箱的访问权限](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->.
+      您的外接程序必须具有 `ReadWriteMailbox` 使用方法的权限 `makeEwsRequestAsync` 。 有关使用 `ReadWriteMailbox` 可使用方法调用的权限和 EWS 操作的信息 `makeEwsRequestAsync` ，请参阅[指定邮件外接程序对用户邮箱的访问权限](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->.
 
       EWS 调用的 XML 结果作为 `asyncResult.value` 属性中的字符串提供。 如果结果大小超过 1 MB，则改为返回一条错误消息。
 
@@ -468,19 +468,19 @@ items:
 
       - 将加载项加载到 Gmail 邮箱中时。
 
-      **注意**：服务器管理员必须在客户`OAuthAuthentication`端`true`访问服务器 EWS 目录上设置为，才能使`makeEwsRequestAsync`方法能够发出 EWS 请求。
+      **注意**：服务器管理员必须 `OAuthAuthentication` `true` 在客户端访问服务器 EWS 目录上设置为，才能使 `makeEwsRequestAsync` 方法能够发出 EWS 请求。
 
       *版本差异*
 
-      当您在早`makeEwsRequestAsync`于较15.0.4535.1004 版本的 Outlook 版本中运行的邮件应用程序中使用方法时，应将编码值设置为 ISO-8859-1。
+      当您 `makeEwsRequestAsync` 在早于较15.0.4535.1004 版本的 Outlook 版本中运行的邮件应用程序中使用方法时，应将编码值设置为 ISO-8859-1。
 
       `<?xml version="1.0" encoding="iso-8859-1"?>`
 
-      当邮件应用程序运行在 Outlook 网页版中时，您不需要设置编码值。 您可以通过使用`mailbox.diagnostics.hostName`属性来确定您的邮件应用程序是在 outlook 中运行还是在 web 上的 outlook 中运行。 您可以通过使用`mailbox.diagnostics.hostVersion`属性来确定运行的是哪个版本的 Outlook。
+      当邮件应用程序运行在 Outlook 网页版中时，您不需要设置编码值。 您可以通过使用属性来确定您的邮件应用程序是在 Outlook 中运行还是在 web 上的 Outlook 中运行 `mailbox.diagnostics.hostName` 。 您可以通过使用属性来确定运行的是哪个版本的 Outlook `mailbox.diagnostics.hostVersion` 。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadWriteMailbox`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadWriteMailbox`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
       #### <a name="examples"></a>示例
 
@@ -587,7 +587,7 @@ items:
           type:
             - any
         - id: callback
-          description: 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->. 结果`value`的属性是以字符串形式提供的 EWS 请求的 XML。 如果结果大小超过 1 MB，则改为返回一条错误消息。
+          description: 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->. `value`结果的属性是以字符串形式提供的 EWS 请求的 XML。 如果结果大小超过 1 MB，则改为返回一条错误消息。
           type:
             - 'outlook!Office.Mailbox#makeEwsRequestAsync~0:complex'
         - id: userContext
