commit bilingual contents

--- a/docs/docs-ref-autogen/office/office/officeextension.eventhandlers.yml
+++ b/docs/docs-ref-autogen/office/office/officeextension.eventhandlers.yml
@@ -12,7 +12,7 @@ items:
       - 'office!OfficeExtension.EventHandlers#add:member(1)'
       - 'office!OfficeExtension.EventHandlers#remove:member(1)'
   - uid: 'office!OfficeExtension.EventHandlers:constructor(1)'
-    summary: <span data-ttu-id="a988c-101">构造`EventHandlers`类的新实例</span><span class="sxs-lookup"><span data-stu-id="a988c-101">Constructs a new instance of the `EventHandlers` class</span></span>
+    summary: 构造类的新实例 `EventHandlers`
     name: '(constructor)(context, parentObject, name, eventInfo)'
     fullName: '(constructor)(context, parentObject, name, eventInfo)'
     langs:
@@ -38,6 +38,7 @@ items:
           type:
             - 'office!OfficeExtension.EventHandlers~0:complex'
   - uid: 'office!OfficeExtension.EventHandlers#add:member(1)'
+    summary: 添加在触发事件时调用的函数。
     name: add(handler)
     fullName: add(handler)
     langs:
@@ -51,10 +52,14 @@ items:
         description: ''
       parameters:
         - id: handler
-          description: ''
+          description: 一个基于承诺的函数，它采用任何相关的事件参数。
           type:
             - 'office!OfficeExtension.EventHandlers#add~1:complex'
   - uid: 'office!OfficeExtension.EventHandlers#remove:member(1)'
+    summary: |-
+      从事件处理程序列表中移除指定的函数，以便不会在后续事件中调用它。
+
+      **注意**：删除处理程序时，必须使用在其中添加了处理程序的相同[RequestContext](xref:office!OfficeExtension.ClientRequestContext:class)对象。 有关[常见问题和意外平台行为的编码指南，](https://docs.microsoft.com/office/dev/add-ins/develop/common-coding-issues#removing-event-handlers)请参阅详细信息<!-- -->.
     name: remove(handler)
     fullName: remove(handler)
     langs:
@@ -68,7 +73,7 @@ items:
         description: ''
       parameters:
         - id: handler
-          description: ''
+          description: 对之前提供给 `add` 方法作为事件处理程序的函数的引用。
           type:
             - 'office!OfficeExtension.EventHandlers#remove~0:complex'
 references:
