commit translated contents

--- a/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartscopedcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartscopedcollectionloadoptions.yml
@@ -17,6 +17,7 @@ items:
       - 'word!Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions#id:member'
       - 'word!Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions#namespaceUri:member'
   - uid: 'word!Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions#$all:member'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     isPreview: true
     name: $all
     fullName: $all
