--- a/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartscopedcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartscopedcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.CustomXmlPartScopedCollectionUpdateData:interface'
-    summary: '一个用于更新 CustomXmlPartScopedCollection 对象上的数据的接口，可用于 "customXmlPartScopedCollection （<!-- -->{ ... }<!-- -->)".'
+    summary: '一个用于更新 CustomXmlPartScopedCollection 对象上的数据的接口，可用于`customXmlPartScopedCollection.set({ ... })`<!-- -->.'
     name: Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
     fullName: Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
     langs:
