--- a/docs/docs-ref-autogen/word/word/word.interfaces.documentcreateddata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.documentcreateddata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.DocumentCreatedData:interface'
-    summary: 描述通过调用 "documentCreated （）" 返回的数据的接口。
+    summary: 描述通过调用返回的数据的接口`documentCreated.toJSON()`<!-- -->.
     name: Word.Interfaces.DocumentCreatedData
     fullName: Word.Interfaces.DocumentCreatedData
     langs:
@@ -21,7 +21,6 @@ items:
       获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。 只读。
 
       \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
     name: body
     fullName: body
     langs:
@@ -37,7 +36,6 @@ items:
       获取文档中的内容控件对象的集合。 这包括文档正文、标头、页脚、文本框等中的内容控件。 只读。
 
       \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
     name: contentControls
     fullName: contentControls
     langs:
@@ -69,7 +67,6 @@ items:
       获取文档的属性。 只读。
 
       \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
     name: properties
     fullName: properties
     langs:
@@ -82,10 +79,9 @@ items:
           - 'word!Word.Interfaces.DocumentPropertiesData:interface'
   - uid: 'word!Word.Interfaces.DocumentCreatedData#saved:member'
     summary: |-
-      指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。
+      Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.
 
       \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
     name: saved
     fullName: saved
     langs:
@@ -101,7 +97,6 @@ items:
       获取文档中的节对象的集合。 只读。
 
       \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
     name: sections
     fullName: sections
     langs:
