--- a/docs/docs-ref-autogen/word/word/word.interfaces.documentcreatedloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.documentcreatedloadoptions.yml
@@ -17,6 +17,7 @@ items:
       - 'word!Word.Interfaces.DocumentCreatedLoadOptions#properties:member'
       - 'word!Word.Interfaces.DocumentCreatedLoadOptions#saved:member'
   - uid: 'word!Word.Interfaces.DocumentCreatedLoadOptions#$all:member'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -32,7 +33,6 @@ items:
       获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。
 
       \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
     name: body
     fullName: body
     langs:
@@ -48,7 +48,6 @@ items:
       获取文档的属性。
 
       \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
     name: properties
     fullName: properties
     langs:
@@ -61,10 +60,9 @@ items:
           - 'word!Word.Interfaces.DocumentPropertiesLoadOptions:interface'
   - uid: 'word!Word.Interfaces.DocumentCreatedLoadOptions#saved:member'
     summary: |-
-      指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。
+      Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.
 
       \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
     name: saved
     fullName: saved
     langs:
