commit bilingual contents

--- a/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartscopedcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartscopedcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="b5f5f-101">包含具有特定命名空间的[CustomXmlPart](xref:word!Word.CustomXmlPart:class)对象的集合。</span><span class="sxs-lookup"><span data-stu-id="b5f5f-101">Contains the collection of [Word.CustomXmlPart](xref:word!Word.CustomXmlPart:class) objects with a specific namespace.</span></span>
+      包含具有特定命名空间的[CustomXmlPart](xref:word!Word.CustomXmlPart:class)对象的集合。
 
-      <span data-ttu-id="b5f5f-102">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b5f5f-102">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions
     fullName: Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions
@@ -17,6 +17,7 @@ items:
       - 'word!Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions#id:member'
       - 'word!Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions#namespaceUri:member'
   - uid: 'word!Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions#$all:member'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     isPreview: true
     name: $all
     fullName: $all
@@ -30,9 +31,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="b5f5f-103">对于集合中的每一项：获取自定义 XML 部件的 ID。</span><span class="sxs-lookup"><span data-stu-id="b5f5f-103">For EACH ITEM in the collection: Gets the ID of the custom XML part.</span></span> <span data-ttu-id="b5f5f-104">只读。</span><span class="sxs-lookup"><span data-stu-id="b5f5f-104">Read only.</span></span>
+      对于集合中的每一项：获取自定义 XML 部件的 ID。 只读。
 
-      <span data-ttu-id="b5f5f-105">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b5f5f-105">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: id
     fullName: id
@@ -46,9 +47,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions#namespaceUri:member'
     summary: |-
-      <span data-ttu-id="b5f5f-106">对于集合中的每一项：获取自定义 XML 部件的命名空间 URI。</span><span class="sxs-lookup"><span data-stu-id="b5f5f-106">For EACH ITEM in the collection: Gets the namespace URI of the custom XML part.</span></span> <span data-ttu-id="b5f5f-107">只读。</span><span class="sxs-lookup"><span data-stu-id="b5f5f-107">Read only.</span></span>
+      对于集合中的每一项：获取自定义 XML 部件的命名空间 URI。 只读。
 
-      <span data-ttu-id="b5f5f-108">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b5f5f-108">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: namespaceUri
     fullName: namespaceUri
