--- a/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartscopedcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartscopedcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.CustomXmlPartScopedCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="26a16-101">一个用于更新 CustomXmlPartScopedCollection 对象上的数据的接口，可用于 "customXmlPartScopedCollection （</span><span class="sxs-lookup"><span data-stu-id="26a16-101">An interface for updating data on the CustomXmlPartScopedCollection object, for use in "customXmlPartScopedCollection.set(</span></span><!-- --><span data-ttu-id="26a16-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="26a16-102"></span></span><!-- --><span data-ttu-id="26a16-103">)".</span><span class="sxs-lookup"><span data-stu-id="26a16-103"></span></span>'
+    summary: '一个用于更新 CustomXmlPartScopedCollection 对象上的数据的接口，可用于`customXmlPartScopedCollection.set({ ... })`<!-- -->.'
     name: Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
     fullName: Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
     langs:
