--- a/docs/docs-ref-autogen/word/word/word.interfaces.documentcreateddata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.documentcreateddata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.DocumentCreatedData:interface'
-    summary: <span data-ttu-id="1bd62-101">描述通过调用 "documentCreated （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="1bd62-101">An interface describing the data returned by calling "documentCreated.toJSON()".</span></span>
+    summary: 描述通过调用返回的数据的接口`documentCreated.toJSON()`<!-- -->.
     name: Word.Interfaces.DocumentCreatedData
     fullName: Word.Interfaces.DocumentCreatedData
     langs:
@@ -18,10 +18,9 @@ items:
       - 'word!Word.Interfaces.DocumentCreatedData#settings:member'
   - uid: 'word!Word.Interfaces.DocumentCreatedData#body:member'
     summary: |-
-      <span data-ttu-id="1bd62-102">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="1bd62-102">Gets the body object of the document.</span></span> <span data-ttu-id="1bd62-103">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="1bd62-103">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span> <span data-ttu-id="1bd62-104">只读。</span><span class="sxs-lookup"><span data-stu-id="1bd62-104">Read-only.</span></span>
+      获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。 只读。
 
-      <span data-ttu-id="1bd62-105">\[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bd62-105">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: body
     fullName: body
     langs:
@@ -34,10 +33,9 @@ items:
           - 'word!Word.Interfaces.BodyData:interface'
   - uid: 'word!Word.Interfaces.DocumentCreatedData#contentControls:member'
     summary: |-
-      <span data-ttu-id="1bd62-106">获取文档中的内容控件对象的集合。</span><span class="sxs-lookup"><span data-stu-id="1bd62-106">Gets the collection of content control objects in the document.</span></span> <span data-ttu-id="1bd62-107">这包括文档正文、标头、页脚、文本框等中的内容控件。</span><span class="sxs-lookup"><span data-stu-id="1bd62-107">This includes content controls in the body of the document, headers, footers, textboxes, etc..</span></span> <span data-ttu-id="1bd62-108">只读。</span><span class="sxs-lookup"><span data-stu-id="1bd62-108">Read-only.</span></span>
+      获取文档中的内容控件对象的集合。 这包括文档正文、标头、页脚、文本框等中的内容控件。 只读。
 
-      <span data-ttu-id="1bd62-109">\[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bd62-109">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: contentControls
     fullName: contentControls
     langs:
@@ -50,9 +48,9 @@ items:
           - 'word!Word.Interfaces.DocumentCreatedData#contentControls~0:complex'
   - uid: 'word!Word.Interfaces.DocumentCreatedData#customXmlParts:member'
     summary: |-
-      <span data-ttu-id="1bd62-110">获取文档中的自定义 XML 部件。</span><span class="sxs-lookup"><span data-stu-id="1bd62-110">Gets the custom XML parts in the document.</span></span> <span data-ttu-id="1bd62-111">只读。</span><span class="sxs-lookup"><span data-stu-id="1bd62-111">Read-only.</span></span>
+      获取文档中的自定义 XML 部件。 只读。
 
-      <span data-ttu-id="1bd62-112">\[[API 集： WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bd62-112">\[ [API set: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: customXmlParts
     fullName: customXmlParts
@@ -66,10 +64,9 @@ items:
           - 'word!Word.Interfaces.DocumentCreatedData#customXmlParts~0:complex'
   - uid: 'word!Word.Interfaces.DocumentCreatedData#properties:member'
     summary: |-
-      <span data-ttu-id="1bd62-113">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="1bd62-113">Gets the properties of the document.</span></span> <span data-ttu-id="1bd62-114">只读。</span><span class="sxs-lookup"><span data-stu-id="1bd62-114">Read-only.</span></span>
+      获取文档的属性。 只读。
 
-      <span data-ttu-id="1bd62-115">\[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bd62-115">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: properties
     fullName: properties
     langs:
@@ -82,10 +79,9 @@ items:
           - 'word!Word.Interfaces.DocumentPropertiesData:interface'
   - uid: 'word!Word.Interfaces.DocumentCreatedData#saved:member'
     summary: |-
-      <span data-ttu-id="1bd62-p105">指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。</span><span class="sxs-lookup"><span data-stu-id="1bd62-p105">Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.</span></span>
+      Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.
 
-      <span data-ttu-id="1bd62-119">\[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bd62-119">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: saved
     fullName: saved
     langs:
@@ -98,10 +94,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.DocumentCreatedData#sections:member'
     summary: |-
-      <span data-ttu-id="1bd62-120">获取文档中的节对象的集合。</span><span class="sxs-lookup"><span data-stu-id="1bd62-120">Gets the collection of section objects in the document.</span></span> <span data-ttu-id="1bd62-121">只读。</span><span class="sxs-lookup"><span data-stu-id="1bd62-121">Read-only.</span></span>
+      获取文档中的节对象的集合。 只读。
 
-      <span data-ttu-id="1bd62-122">\[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bd62-122">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: sections
     fullName: sections
     langs:
@@ -114,9 +109,9 @@ items:
           - 'word!Word.Interfaces.DocumentCreatedData#sections~0:complex'
   - uid: 'word!Word.Interfaces.DocumentCreatedData#settings:member'
     summary: |-
-      <span data-ttu-id="1bd62-123">获取文档中的加载项设置。</span><span class="sxs-lookup"><span data-stu-id="1bd62-123">Gets the add-in's settings in the document.</span></span> <span data-ttu-id="1bd62-124">只读。</span><span class="sxs-lookup"><span data-stu-id="1bd62-124">Read-only.</span></span>
+      获取文档中的加载项设置。 只读。
 
-      <span data-ttu-id="1bd62-125">\[[API 集： WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bd62-125">\[ [API set: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: settings
     fullName: settings
