--- a/docs/docs-ref-autogen/word/word/word.interfaces.documentcreatedloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.documentcreatedloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.Interfaces.DocumentCreatedLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="f5e02-101">DocumentCreated 对象是 CreateDocument 创建的顶级对象。</span><span class="sxs-lookup"><span data-stu-id="f5e02-101">The DocumentCreated object is the top level object created by Application.CreateDocument.</span></span> <span data-ttu-id="f5e02-102">DocumentCreated 对象是特殊的文档对象。</span><span class="sxs-lookup"><span data-stu-id="f5e02-102">A DocumentCreated object is a special Document object.</span></span>
+      DocumentCreated 对象是 CreateDocument 创建的顶级对象。 DocumentCreated 对象是特殊的文档对象。
 
-      <span data-ttu-id="f5e02-103">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f5e02-103">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.Interfaces.DocumentCreatedLoadOptions
     fullName: Word.Interfaces.DocumentCreatedLoadOptions
     langs:
@@ -17,6 +17,7 @@ items:
       - 'word!Word.Interfaces.DocumentCreatedLoadOptions#properties:member'
       - 'word!Word.Interfaces.DocumentCreatedLoadOptions#saved:member'
   - uid: 'word!Word.Interfaces.DocumentCreatedLoadOptions#$all:member'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -29,10 +30,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.DocumentCreatedLoadOptions#body:member'
     summary: |-
-      <span data-ttu-id="f5e02-104">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="f5e02-104">Gets the body object of the document.</span></span> <span data-ttu-id="f5e02-105">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="f5e02-105">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span>
+      获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。
 
-      <span data-ttu-id="f5e02-106">\[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f5e02-106">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: body
     fullName: body
     langs:
@@ -45,10 +45,9 @@ items:
           - 'word!Word.Interfaces.BodyLoadOptions:interface'
   - uid: 'word!Word.Interfaces.DocumentCreatedLoadOptions#properties:member'
     summary: |-
-      <span data-ttu-id="f5e02-107">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="f5e02-107">Gets the properties of the document.</span></span>
+      获取文档的属性。
 
-      <span data-ttu-id="f5e02-108">\[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f5e02-108">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: properties
     fullName: properties
     langs:
@@ -61,10 +60,9 @@ items:
           - 'word!Word.Interfaces.DocumentPropertiesLoadOptions:interface'
   - uid: 'word!Word.Interfaces.DocumentCreatedLoadOptions#saved:member'
     summary: |-
-      <span data-ttu-id="f5e02-p103">指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。</span><span class="sxs-lookup"><span data-stu-id="f5e02-p103">Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.</span></span>
+      Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.
 
-      <span data-ttu-id="f5e02-112">\[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f5e02-112">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: saved
     fullName: saved
     langs:
