--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontrolcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontrolcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="cf8ad-101">包含[ContentControl](xref:word!Word.ContentControl:class)对象的集合。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-101">Contains a collection of [Word.ContentControl](xref:word!Word.ContentControl:class) objects.</span></span> <span data-ttu-id="cf8ad-102">内容控件是文档中绑定的、有可能添加标签的区域，它们充当特定类型的内容的容器。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-102">Content controls are bounded and potentially labeled regions in a document that serve as containers for specific types of content.</span></span> <span data-ttu-id="cf8ad-103">单个内容控件可能包含诸如图片、表或格式化文本段落等内容。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-103">Individual content controls may contain contents such as images, tables, or paragraphs of formatted text.</span></span> <span data-ttu-id="cf8ad-104">当前仅支持富文本内容控件。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-104">Currently, only rich text content controls are supported.</span></span>
+      包含[ContentControl](xref:word!Word.ContentControl:class)对象的集合。 内容控件是文档中绑定的、有可能添加标签的区域，它们充当特定类型的内容的容器。 单个内容控件可能包含诸如图片、表或格式化文本段落等内容。 当前仅支持富文本内容控件。
 
-      <span data-ttu-id="cf8ad-105">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.Interfaces.ContentControlCollectionLoadOptions
     fullName: Word.Interfaces.ContentControlCollectionLoadOptions
     langs:
@@ -28,6 +28,7 @@ items:
       - 'word!Word.Interfaces.ContentControlCollectionLoadOptions#title:member'
       - 'word!Word.Interfaces.ContentControlCollectionLoadOptions#type:member'
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#$all:member'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -40,9 +41,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#appearance:member'
     summary: |-
-      <span data-ttu-id="cf8ad-106">对于集合中的每一项：获取或设置内容控件的外观。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-106">For EACH ITEM in the collection: Gets or sets the appearance of the content control.</span></span> <span data-ttu-id="cf8ad-107">该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-107">The value can be 'BoundingBox', 'Tags', or 'Hidden'.</span></span>
+      对于集合中的每一项：获取或设置内容控件的外观。 该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。
 
-      <span data-ttu-id="cf8ad-108">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-108">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: appearance
     fullName: appearance
     langs:
@@ -55,9 +56,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#cannotDelete:member'
     summary: |-
-      <span data-ttu-id="cf8ad-109">对于集合中的每一项：获取或设置一个值，该值指示用户是否可以删除内容控件。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-109">For EACH ITEM in the collection: Gets or sets a value that indicates whether the user can delete the content control.</span></span> <span data-ttu-id="cf8ad-110">与 removeWhenEdited 互相排斥。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-110">Mutually exclusive with removeWhenEdited.</span></span>
+      对于集合中的每一项：获取或设置一个值，该值指示用户是否可以删除内容控件。 与 removeWhenEdited 互相排斥。
 
-      <span data-ttu-id="cf8ad-111">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-111">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: cannotDelete
     fullName: cannotDelete
     langs:
@@ -70,9 +71,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#cannotEdit:member'
     summary: |-
-      <span data-ttu-id="cf8ad-112">对于集合中的每一项：获取或设置一个值，该值指示用户是否可以编辑内容控件的内容。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-112">For EACH ITEM in the collection: Gets or sets a value that indicates whether the user can edit the contents of the content control.</span></span>
+      对于集合中的每一项：获取或设置一个值，该值指示用户是否可以编辑内容控件的内容。
 
-      <span data-ttu-id="cf8ad-113">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-113">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: cannotEdit
     fullName: cannotEdit
     langs:
@@ -85,9 +86,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="cf8ad-114">对于集合中的每一项：获取或设置内容控件的颜色。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-114">For EACH ITEM in the collection: Gets or sets the color of the content control.</span></span> <span data-ttu-id="cf8ad-115">颜色以 "\#RRGGBB" 格式或使用颜色名称指定。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-115">Color is specified in '\#RRGGBB' format or by using the color name.</span></span>
+      对于集合中的每一项：获取或设置内容控件的颜色。 颜色以 " \# RRGGBB" 格式或使用颜色名称指定。
 
-      <span data-ttu-id="cf8ad-116">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-116">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -100,9 +101,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="cf8ad-117">对于集合中的每一项：获取内容控件的文本格式。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-117">For EACH ITEM in the collection: Gets the text format of the content control.</span></span> <span data-ttu-id="cf8ad-118">使用此对象获取和设置字体名称、大小、颜色和其他属性。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-118">Use this to get and set font name, size, color, and other properties.</span></span>
+      对于集合中的每一项：获取内容控件的文本格式。 使用此对象获取和设置字体名称、大小、颜色和其他属性。
 
-      <span data-ttu-id="cf8ad-119">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-119">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -115,9 +116,9 @@ items:
           - 'word!Word.Interfaces.FontLoadOptions:interface'
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="cf8ad-120">对于集合中的每一项：获取一个整数，表示内容控件标识符。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-120">For EACH ITEM in the collection: Gets an integer that represents the content control identifier.</span></span> <span data-ttu-id="cf8ad-121">只读。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-121">Read-only.</span></span>
+      对于集合中的每一项：获取一个整数，表示内容控件标识符。 只读。
 
-      <span data-ttu-id="cf8ad-122">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-122">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -130,9 +131,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#parentContentControl:member'
     summary: |-
-      <span data-ttu-id="cf8ad-123">对于集合中的每一项：获取包含内容控件的内容控件。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-123">For EACH ITEM in the collection: Gets the content control that contains the content control.</span></span> <span data-ttu-id="cf8ad-124">如果没有父内容控件，则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-124">Throws an error if there isn't a parent content control.</span></span>
+      对于集合中的每一项：获取包含内容控件的内容控件。 如果没有父内容控件，则会引发错误。
 
-      <span data-ttu-id="cf8ad-125">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-125">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: parentContentControl
     fullName: parentContentControl
     langs:
@@ -145,9 +146,9 @@ items:
           - 'word!Word.Interfaces.ContentControlLoadOptions:interface'
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#placeholderText:member'
     summary: |-
-      <span data-ttu-id="cf8ad-126">对于集合中的每一项：获取或设置内容控件的占位符文本。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-126">For EACH ITEM in the collection: Gets or sets the placeholder text of the content control.</span></span> <span data-ttu-id="cf8ad-127">内容控件为空时，将显示灰色的文本。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-127">Dimmed text will be displayed when the content control is empty.</span></span>
+      对于集合中的每一项：获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
-      <span data-ttu-id="cf8ad-128">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-128">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: placeholderText
     fullName: placeholderText
     langs:
@@ -160,9 +161,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#removeWhenEdited:member'
     summary: |-
-      <span data-ttu-id="cf8ad-129">对于集合中的每一项：获取或设置一个值，该值指示是否在编辑内容控件之后将其删除。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-129">For EACH ITEM in the collection: Gets or sets a value that indicates whether the content control is removed after it is edited.</span></span> <span data-ttu-id="cf8ad-130">与 cannotDelete 互相排斥。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-130">Mutually exclusive with cannotDelete.</span></span>
+      对于集合中的每一项：获取或设置一个值，该值指示是否在编辑内容控件之后将其删除。 与 cannotDelete 互相排斥。
 
-      <span data-ttu-id="cf8ad-131">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-131">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: removeWhenEdited
     fullName: removeWhenEdited
     langs:
@@ -175,9 +176,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#style:member'
     summary: |-
-      <span data-ttu-id="cf8ad-132">对于集合中的每一项：获取或设置内容控件的样式名称。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-132">For EACH ITEM in the collection: Gets or sets the style name for the content control.</span></span> <span data-ttu-id="cf8ad-133">请对自定义样式和本地化样式名称使用此属性。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-133">Use this property for custom styles and localized style names.</span></span> <span data-ttu-id="cf8ad-134">若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-134">To use the built-in styles that are portable between locales, see the "styleBuiltIn" property.</span></span>
+      对于集合中的每一项：获取或设置内容控件的样式名称。 请对自定义样式和本地化样式名称使用此属性。 若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
 
-      <span data-ttu-id="cf8ad-135">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-135">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -190,9 +191,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#tag:member'
     summary: |-
-      <span data-ttu-id="cf8ad-136">对于集合中的每一项：获取或设置用于标识内容控件的标记。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-136">For EACH ITEM in the collection: Gets or sets a tag to identify a content control.</span></span>
+      对于集合中的每一项：获取或设置用于标识内容控件的标记。
 
-      <span data-ttu-id="cf8ad-137">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-137">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: tag
     fullName: tag
     langs:
@@ -205,9 +206,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#text:member'
     summary: |-
-      <span data-ttu-id="cf8ad-138">对于集合中的每一项：获取内容控件的文本。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-138">For EACH ITEM in the collection: Gets the text of the content control.</span></span> <span data-ttu-id="cf8ad-139">只读。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-139">Read-only.</span></span>
+      对于集合中的每一项：获取内容控件的文本。 只读。
 
-      <span data-ttu-id="cf8ad-140">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-140">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -220,9 +221,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#title:member'
     summary: |-
-      <span data-ttu-id="cf8ad-141">对于集合中的每一项：获取或设置内容控件的标题。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-141">For EACH ITEM in the collection: Gets or sets the title for a content control.</span></span>
+      对于集合中的每一项：获取或设置内容控件的标题。
 
-      <span data-ttu-id="cf8ad-142">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-142">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -235,9 +236,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="cf8ad-143">对于集合中的每一项：获取内容控件的类型。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-143">For EACH ITEM in the collection: Gets the content control type.</span></span> <span data-ttu-id="cf8ad-144">当前仅支持富文本内容控件。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-144">Only rich text content controls are supported currently.</span></span> <span data-ttu-id="cf8ad-145">只读。</span><span class="sxs-lookup"><span data-stu-id="cf8ad-145">Read-only.</span></span>
+      对于集合中的每一项：获取内容控件的类型。 当前仅支持富文本内容控件。 只读。
 
-      <span data-ttu-id="cf8ad-146">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf8ad-146">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
