--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tablecellupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tablecellupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.TableCellUpdateData:interface'
-    summary: '<span data-ttu-id="463d6-101">一个用于更新 TableCell 对象上的数据的接口，可用于 "tableCell （</span><span class="sxs-lookup"><span data-stu-id="463d6-101">An interface for updating data on the TableCell object, for use in "tableCell.set(</span></span><!-- --><span data-ttu-id="463d6-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="463d6-102"></span></span><!-- --><span data-ttu-id="463d6-103">)".</span><span class="sxs-lookup"><span data-stu-id="463d6-103"></span></span>'
+    summary: '一个用于更新 TableCell 对象上的数据的接口，可用于`tableCell.set({ ... })`<!-- -->.'
     name: Word.Interfaces.TableCellUpdateData
     fullName: Word.Interfaces.TableCellUpdateData
     langs:
