--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tablecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tablecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.TableCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="7cea7-101">一个用于更新 TableCollection 对象上的数据的接口，可用于 "tableCollection （</span><span class="sxs-lookup"><span data-stu-id="7cea7-101">An interface for updating data on the TableCollection object, for use in "tableCollection.set(</span></span><!-- --><span data-ttu-id="7cea7-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="7cea7-102"></span></span><!-- --><span data-ttu-id="7cea7-103">)".</span><span class="sxs-lookup"><span data-stu-id="7cea7-103"></span></span>'
+    summary: '一个用于更新 TableCollection 对象上的数据的接口，可用于`tableCollection.set({ ... })`<!-- -->.'
     name: Word.Interfaces.TableCollectionUpdateData
     fullName: Word.Interfaces.TableCollectionUpdateData
     langs:
