--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tablerowcollectiondata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tablerowcollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.TableRowCollectionData:interface'
-    summary: <span data-ttu-id="ef699-101">描述通过调用 "tableRowCollection （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="ef699-101">An interface describing the data returned by calling "tableRowCollection.toJSON()".</span></span>
+    summary: 描述通过调用返回的数据的接口`tableRowCollection.toJSON()`<!-- -->.
     name: Word.Interfaces.TableRowCollectionData
     fullName: Word.Interfaces.TableRowCollectionData
     langs:
