--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tablerowdata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.tablerowdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.TableRowData:interface'
-    summary: <span data-ttu-id="fe6f5-101">描述通过调用 "tableRow （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="fe6f5-101">An interface describing the data returned by calling "tableRow.toJSON()".</span></span>
+    summary: 描述通过调用返回的数据的接口`tableRow.toJSON()`<!-- -->.
     name: Word.Interfaces.TableRowData
     fullName: Word.Interfaces.TableRowData
     langs:
