--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.bodydata.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.bodydata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.BodyData:interface'
-    summary: <span data-ttu-id="276dc-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="276dc-101">An interface describing the data returned by calling "body.toJSON()".</span></span>
+    summary: 描述通过调用返回的数据的接口`body.toJSON()`<!-- -->.
     name: Word.Interfaces.BodyData
     fullName: Word.Interfaces.BodyData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'word!Word.Interfaces.BodyData#text:member'
   - uid: 'word!Word.Interfaces.BodyData#contentControls:member'
     summary: |-
-      <span data-ttu-id="276dc-102">获取正文中的格式文本内容控件对象的集合。</span><span class="sxs-lookup"><span data-stu-id="276dc-102">Gets the collection of rich text content control objects in the body.</span></span> <span data-ttu-id="276dc-103">只读。</span><span class="sxs-lookup"><span data-stu-id="276dc-103">Read-only.</span></span>
+      获取正文中的格式文本内容控件对象的集合。 只读。
 
-      <span data-ttu-id="276dc-104">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="276dc-104">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: contentControls
     fullName: contentControls
     langs:
@@ -32,9 +32,9 @@ items:
           - 'word!Word.Interfaces.BodyData#contentControls~0:complex'
   - uid: 'word!Word.Interfaces.BodyData#font:member'
     summary: |-
-      <span data-ttu-id="276dc-105">获取正文的文本格式。</span><span class="sxs-lookup"><span data-stu-id="276dc-105">Gets the text format of the body.</span></span> <span data-ttu-id="276dc-106">使用此属性可获取和设置字体名称、大小、颜色和其他属性。</span><span class="sxs-lookup"><span data-stu-id="276dc-106">Use this to get and set font name, size, color and other properties.</span></span> <span data-ttu-id="276dc-107">只读。</span><span class="sxs-lookup"><span data-stu-id="276dc-107">Read-only.</span></span>
+      获取正文的文本格式。 使用此属性可获取和设置字体名称、大小、颜色和其他属性。 只读。
 
-      <span data-ttu-id="276dc-108">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="276dc-108">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -47,9 +47,9 @@ items:
           - 'word!Word.Interfaces.FontData:interface'
   - uid: 'word!Word.Interfaces.BodyData#inlinePictures:member'
     summary: |-
-      <span data-ttu-id="276dc-109">获取正文中 InlinePicture 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="276dc-109">Gets the collection of InlinePicture objects in the body.</span></span> <span data-ttu-id="276dc-110">集合不包括浮动图像。</span><span class="sxs-lookup"><span data-stu-id="276dc-110">The collection does not include floating images.</span></span> <span data-ttu-id="276dc-111">只读。</span><span class="sxs-lookup"><span data-stu-id="276dc-111">Read-only.</span></span>
+      获取正文中 InlinePicture 对象的集合。 集合不包括浮动图像。 只读。
 
-      <span data-ttu-id="276dc-112">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="276dc-112">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: inlinePictures
     fullName: inlinePictures
     langs:
@@ -62,9 +62,9 @@ items:
           - 'word!Word.Interfaces.BodyData#inlinePictures~0:complex'
   - uid: 'word!Word.Interfaces.BodyData#paragraphs:member'
     summary: |-
-      <span data-ttu-id="276dc-113">获取正文中段落对象的集合。</span><span class="sxs-lookup"><span data-stu-id="276dc-113">Gets the collection of paragraph objects in the body.</span></span> <span data-ttu-id="276dc-114">只读。</span><span class="sxs-lookup"><span data-stu-id="276dc-114">Read-only.</span></span>
+      获取正文中段落对象的集合。 只读。
 
-      <span data-ttu-id="276dc-115">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="276dc-115">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: paragraphs
     fullName: paragraphs
     langs:
@@ -77,9 +77,9 @@ items:
           - 'word!Word.Interfaces.BodyData#paragraphs~0:complex'
   - uid: 'word!Word.Interfaces.BodyData#style:member'
     summary: |-
-      <span data-ttu-id="276dc-p105">获取或设置 body 的样式名称。请对自定义样式和本地化样式名称使用此属性。若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。</span><span class="sxs-lookup"><span data-stu-id="276dc-p105">Gets or sets the style name for the body. Use this property for custom styles and localized style names. To use the built-in styles that are portable between locales, see the "styleBuiltIn" property.</span></span>
+      Gets or sets the style name for the body. Use this property for custom styles and localized style names. To use the built-in styles that are portable between locales, see the "styleBuiltIn" property.
 
-      <span data-ttu-id="276dc-119">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="276dc-119">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -92,9 +92,9 @@ items:
           - string
   - uid: 'word!Word.Interfaces.BodyData#text:member'
     summary: |-
-      <span data-ttu-id="276dc-120">获取正文的文本。</span><span class="sxs-lookup"><span data-stu-id="276dc-120">Gets the text of the body.</span></span> <span data-ttu-id="276dc-121">使用 insertText 方法插入文本。</span><span class="sxs-lookup"><span data-stu-id="276dc-121">Use the insertText method to insert text.</span></span> <span data-ttu-id="276dc-122">只读。</span><span class="sxs-lookup"><span data-stu-id="276dc-122">Read-only.</span></span>
+      获取正文的文本。 使用 insertText 方法插入文本。 只读。
 
-      <span data-ttu-id="276dc-123">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="276dc-123">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
