--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.bodyloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.bodyloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.Interfaces.BodyLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="8db03-101">表示文档或节的正文。</span><span class="sxs-lookup"><span data-stu-id="8db03-101">Represents the body of a document or a section.</span></span>
+      表示文档或节的正文。
 
-      <span data-ttu-id="8db03-102">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8db03-102">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.Interfaces.BodyLoadOptions
     fullName: Word.Interfaces.BodyLoadOptions
     langs:
@@ -18,6 +18,7 @@ items:
       - 'word!Word.Interfaces.BodyLoadOptions#style:member'
       - 'word!Word.Interfaces.BodyLoadOptions#text:member'
   - uid: 'word!Word.Interfaces.BodyLoadOptions#$all:member'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -30,9 +31,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.BodyLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="8db03-103">获取正文的文本格式。</span><span class="sxs-lookup"><span data-stu-id="8db03-103">Gets the text format of the body.</span></span> <span data-ttu-id="8db03-104">使用此属性可获取和设置字体名称、大小、颜色和其他属性。</span><span class="sxs-lookup"><span data-stu-id="8db03-104">Use this to get and set font name, size, color and other properties.</span></span>
+      获取正文的文本格式。 使用此属性可获取和设置字体名称、大小、颜色和其他属性。
 
-      <span data-ttu-id="8db03-105">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8db03-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -45,9 +46,9 @@ items:
           - 'word!Word.Interfaces.FontLoadOptions:interface'
   - uid: 'word!Word.Interfaces.BodyLoadOptions#parentContentControl:member'
     summary: |-
-      <span data-ttu-id="8db03-106">获取包含正文的内容控件。</span><span class="sxs-lookup"><span data-stu-id="8db03-106">Gets the content control that contains the body.</span></span> <span data-ttu-id="8db03-107">如果没有父内容控件，则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="8db03-107">Throws an error if there isn't a parent content control.</span></span>
+      获取包含正文的内容控件。 如果没有父内容控件，则会引发错误。
 
-      <span data-ttu-id="8db03-108">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8db03-108">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: parentContentControl
     fullName: parentContentControl
     langs:
@@ -60,9 +61,9 @@ items:
           - 'word!Word.Interfaces.ContentControlLoadOptions:interface'
   - uid: 'word!Word.Interfaces.BodyLoadOptions#style:member'
     summary: |-
-      <span data-ttu-id="8db03-p103">获取或设置 body 的样式名称。请对自定义样式和本地化样式名称使用此属性。若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。</span><span class="sxs-lookup"><span data-stu-id="8db03-p103">Gets or sets the style name for the body. Use this property for custom styles and localized style names. To use the built-in styles that are portable between locales, see the "styleBuiltIn" property.</span></span>
+      Gets or sets the style name for the body. Use this property for custom styles and localized style names. To use the built-in styles that are portable between locales, see the "styleBuiltIn" property.
 
-      <span data-ttu-id="8db03-112">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8db03-112">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -75,9 +76,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.BodyLoadOptions#text:member'
     summary: |-
-      <span data-ttu-id="8db03-113">获取正文的文本。</span><span class="sxs-lookup"><span data-stu-id="8db03-113">Gets the text of the body.</span></span> <span data-ttu-id="8db03-114">使用 insertText 方法插入文本。</span><span class="sxs-lookup"><span data-stu-id="8db03-114">Use the insertText method to insert text.</span></span> <span data-ttu-id="8db03-115">只读。</span><span class="sxs-lookup"><span data-stu-id="8db03-115">Read-only.</span></span>
+      获取正文的文本。 使用 insertText 方法插入文本。 只读。
 
-      <span data-ttu-id="8db03-116">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8db03-116">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
