--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="07788-p101">表示内容控件。内容控件是文档中绑定的、有可能添加标签的区域，它们充当特定类型的内容的容器。单个内容控件可能包含诸如图像、表或格式化文本段落等内容。当前仅支持富文本内容控件。</span><span class="sxs-lookup"><span data-stu-id="07788-p101">Represents a content control. Content controls are bounded and potentially labeled regions in a document that serve as containers for specific types of content. Individual content controls may contain contents such as images, tables, or paragraphs of formatted text. Currently, only rich text content controls are supported.</span></span>
+      Represents a content control. Content controls are bounded and potentially labeled regions in a document that serve as containers for specific types of content. Individual content controls may contain contents such as images, tables, or paragraphs of formatted text. Currently, only rich text content controls are supported.
 
-      <span data-ttu-id="07788-105">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.Interfaces.ContentControlLoadOptions
     fullName: Word.Interfaces.ContentControlLoadOptions
     langs:
@@ -28,6 +28,7 @@ items:
       - 'word!Word.Interfaces.ContentControlLoadOptions#title:member'
       - 'word!Word.Interfaces.ContentControlLoadOptions#type:member'
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#$all:member'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -40,9 +41,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#appearance:member'
     summary: |-
-      <span data-ttu-id="07788-106">获取或设置内容控件的外观。</span><span class="sxs-lookup"><span data-stu-id="07788-106">Gets or sets the appearance of the content control.</span></span> <span data-ttu-id="07788-107">该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。</span><span class="sxs-lookup"><span data-stu-id="07788-107">The value can be 'BoundingBox', 'Tags', or 'Hidden'.</span></span>
+      获取或设置内容控件的外观。 该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。
 
-      <span data-ttu-id="07788-108">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-108">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: appearance
     fullName: appearance
     langs:
@@ -55,9 +56,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#cannotDelete:member'
     summary: |-
-      <span data-ttu-id="07788-109">获取或设置指示用户是否可以删除内容控件的值。</span><span class="sxs-lookup"><span data-stu-id="07788-109">Gets or sets a value that indicates whether the user can delete the content control.</span></span> <span data-ttu-id="07788-110">与 removeWhenEdited 互相排斥。</span><span class="sxs-lookup"><span data-stu-id="07788-110">Mutually exclusive with removeWhenEdited.</span></span>
+      获取或设置指示用户是否可以删除内容控件的值。 与 removeWhenEdited 互相排斥。
 
-      <span data-ttu-id="07788-111">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-111">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: cannotDelete
     fullName: cannotDelete
     langs:
@@ -70,9 +71,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#cannotEdit:member'
     summary: |-
-      <span data-ttu-id="07788-112">获取或设置指示用户是否可以编辑内容控件的内容的值。</span><span class="sxs-lookup"><span data-stu-id="07788-112">Gets or sets a value that indicates whether the user can edit the contents of the content control.</span></span>
+      获取或设置指示用户是否可以编辑内容控件的内容的值。
 
-      <span data-ttu-id="07788-113">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-113">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: cannotEdit
     fullName: cannotEdit
     langs:
@@ -85,9 +86,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="07788-114">获取或设置内容控件的颜色。</span><span class="sxs-lookup"><span data-stu-id="07788-114">Gets or sets the color of the content control.</span></span> <span data-ttu-id="07788-115">颜色以 "\#RRGGBB" 格式或使用颜色名称指定。</span><span class="sxs-lookup"><span data-stu-id="07788-115">Color is specified in '\#RRGGBB' format or by using the color name.</span></span>
+      获取或设置内容控件的颜色。 颜色以 " \# RRGGBB" 格式或使用颜色名称指定。
 
-      <span data-ttu-id="07788-116">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-116">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -100,9 +101,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="07788-117">获取内容控件的文本格式。</span><span class="sxs-lookup"><span data-stu-id="07788-117">Gets the text format of the content control.</span></span> <span data-ttu-id="07788-118">使用此对象获取和设置字体名称、大小、颜色和其他属性。</span><span class="sxs-lookup"><span data-stu-id="07788-118">Use this to get and set font name, size, color, and other properties.</span></span>
+      获取内容控件的文本格式。 使用此对象获取和设置字体名称、大小、颜色和其他属性。
 
-      <span data-ttu-id="07788-119">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-119">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -115,9 +116,9 @@ items:
           - 'word!Word.Interfaces.FontLoadOptions:interface'
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="07788-120">获取表示内容控件标识符的整数。</span><span class="sxs-lookup"><span data-stu-id="07788-120">Gets an integer that represents the content control identifier.</span></span> <span data-ttu-id="07788-121">只读。</span><span class="sxs-lookup"><span data-stu-id="07788-121">Read-only.</span></span>
+      获取表示内容控件标识符的整数。 只读。
 
-      <span data-ttu-id="07788-122">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-122">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -130,9 +131,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#parentContentControl:member'
     summary: |-
-      <span data-ttu-id="07788-123">获取包含此内容控件的内容控件。</span><span class="sxs-lookup"><span data-stu-id="07788-123">Gets the content control that contains the content control.</span></span> <span data-ttu-id="07788-124">如果没有父内容控件，则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="07788-124">Throws an error if there isn't a parent content control.</span></span>
+      获取包含此内容控件的内容控件。 如果没有父内容控件，则会引发错误。
 
-      <span data-ttu-id="07788-125">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-125">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: parentContentControl
     fullName: parentContentControl
     langs:
@@ -145,9 +146,9 @@ items:
           - 'word!Word.Interfaces.ContentControlLoadOptions:interface'
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#placeholderText:member'
     summary: |-
-      <span data-ttu-id="07788-126">获取或设置内容控件的占位符文本。</span><span class="sxs-lookup"><span data-stu-id="07788-126">Gets or sets the placeholder text of the content control.</span></span> <span data-ttu-id="07788-127">内容控件为空时，将显示灰色的文本。</span><span class="sxs-lookup"><span data-stu-id="07788-127">Dimmed text will be displayed when the content control is empty.</span></span>
+      获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
-      <span data-ttu-id="07788-128">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-128">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: placeholderText
     fullName: placeholderText
     langs:
@@ -160,9 +161,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#removeWhenEdited:member'
     summary: |-
-      <span data-ttu-id="07788-129">获取或设置指示内容控件在编辑后是否可以删除的值。</span><span class="sxs-lookup"><span data-stu-id="07788-129">Gets or sets a value that indicates whether the content control is removed after it is edited.</span></span> <span data-ttu-id="07788-130">与 cannotDelete 互相排斥。</span><span class="sxs-lookup"><span data-stu-id="07788-130">Mutually exclusive with cannotDelete.</span></span>
+      获取或设置指示内容控件在编辑后是否可以删除的值。 与 cannotDelete 互相排斥。
 
-      <span data-ttu-id="07788-131">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-131">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: removeWhenEdited
     fullName: removeWhenEdited
     langs:
@@ -175,9 +176,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#style:member'
     summary: |-
-      <span data-ttu-id="07788-132">获取或设置内容控件的样式名称。</span><span class="sxs-lookup"><span data-stu-id="07788-132">Gets or sets the style name for the content control.</span></span> <span data-ttu-id="07788-133">请对自定义样式和本地化样式名称使用此属性。</span><span class="sxs-lookup"><span data-stu-id="07788-133">Use this property for custom styles and localized style names.</span></span> <span data-ttu-id="07788-134">若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。</span><span class="sxs-lookup"><span data-stu-id="07788-134">To use the built-in styles that are portable between locales, see the "styleBuiltIn" property.</span></span>
+      获取或设置内容控件的样式名称。 请对自定义样式和本地化样式名称使用此属性。 若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
 
-      <span data-ttu-id="07788-135">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-135">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -190,9 +191,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#tag:member'
     summary: |-
-      <span data-ttu-id="07788-136">获取或设置用于标识内容控件的标记。</span><span class="sxs-lookup"><span data-stu-id="07788-136">Gets or sets a tag to identify a content control.</span></span>
+      获取或设置用于标识内容控件的标记。
 
-      <span data-ttu-id="07788-137">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-137">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: tag
     fullName: tag
     langs:
@@ -205,9 +206,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#text:member'
     summary: |-
-      <span data-ttu-id="07788-138">获取内容控件的文本。</span><span class="sxs-lookup"><span data-stu-id="07788-138">Gets the text of the content control.</span></span> <span data-ttu-id="07788-139">只读。</span><span class="sxs-lookup"><span data-stu-id="07788-139">Read-only.</span></span>
+      获取内容控件的文本。 只读。
 
-      <span data-ttu-id="07788-140">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-140">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -220,9 +221,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#title:member'
     summary: |-
-      <span data-ttu-id="07788-141">获取或设置内容控件的标题。</span><span class="sxs-lookup"><span data-stu-id="07788-141">Gets or sets the title for a content control.</span></span>
+      获取或设置内容控件的标题。
 
-      <span data-ttu-id="07788-142">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-142">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -235,9 +236,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="07788-143">获取内容控件的类型。</span><span class="sxs-lookup"><span data-stu-id="07788-143">Gets the content control type.</span></span> <span data-ttu-id="07788-144">当前仅支持富文本内容控件。</span><span class="sxs-lookup"><span data-stu-id="07788-144">Only rich text content controls are supported currently.</span></span> <span data-ttu-id="07788-145">只读。</span><span class="sxs-lookup"><span data-stu-id="07788-145">Read-only.</span></span>
+      获取内容控件的类型。 当前仅支持富文本内容控件。 只读。
 
-      <span data-ttu-id="07788-146">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="07788-146">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
