--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.ContentControlUpdateData:interface'
-    summary: '<span data-ttu-id="f18c4-101">一个用于更新 ContentControl 对象上的数据的接口，可用于 "contentControl （</span><span class="sxs-lookup"><span data-stu-id="f18c4-101">An interface for updating data on the ContentControl object, for use in "contentControl.set(</span></span><!-- --><span data-ttu-id="f18c4-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="f18c4-102"></span></span><!-- --><span data-ttu-id="f18c4-103">)".</span><span class="sxs-lookup"><span data-stu-id="f18c4-103"></span></span>'
+    summary: '一个用于更新 ContentControl 对象上的数据的接口，可用于`contentControl.set({ ... })`<!-- -->.'
     name: Word.Interfaces.ContentControlUpdateData
     fullName: Word.Interfaces.ContentControlUpdateData
     langs:
@@ -21,9 +21,9 @@ items:
       - 'word!Word.Interfaces.ContentControlUpdateData#title:member'
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#appearance:member'
     summary: |-
-      <span data-ttu-id="f18c4-104">获取或设置内容控件的外观。</span><span class="sxs-lookup"><span data-stu-id="f18c4-104">Gets or sets the appearance of the content control.</span></span> <span data-ttu-id="f18c4-105">该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。</span><span class="sxs-lookup"><span data-stu-id="f18c4-105">The value can be 'BoundingBox', 'Tags', or 'Hidden'.</span></span>
+      获取或设置内容控件的外观。 该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。
 
-      <span data-ttu-id="f18c4-106">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-106">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: appearance
     fullName: appearance
     langs:
@@ -36,9 +36,9 @@ items:
           - 'word!Word.Interfaces.ContentControlUpdateData#appearance~0:complex'
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#cannotDelete:member'
     summary: |-
-      <span data-ttu-id="f18c4-107">获取或设置指示用户是否可以删除内容控件的值。</span><span class="sxs-lookup"><span data-stu-id="f18c4-107">Gets or sets a value that indicates whether the user can delete the content control.</span></span> <span data-ttu-id="f18c4-108">与 removeWhenEdited 互相排斥。</span><span class="sxs-lookup"><span data-stu-id="f18c4-108">Mutually exclusive with removeWhenEdited.</span></span>
+      获取或设置指示用户是否可以删除内容控件的值。 与 removeWhenEdited 互相排斥。
 
-      <span data-ttu-id="f18c4-109">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-109">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: cannotDelete
     fullName: cannotDelete
     langs:
@@ -51,9 +51,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#cannotEdit:member'
     summary: |-
-      <span data-ttu-id="f18c4-110">获取或设置指示用户是否可以编辑内容控件的内容的值。</span><span class="sxs-lookup"><span data-stu-id="f18c4-110">Gets or sets a value that indicates whether the user can edit the contents of the content control.</span></span>
+      获取或设置指示用户是否可以编辑内容控件的内容的值。
 
-      <span data-ttu-id="f18c4-111">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-111">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: cannotEdit
     fullName: cannotEdit
     langs:
@@ -66,9 +66,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#color:member'
     summary: |-
-      <span data-ttu-id="f18c4-112">获取或设置内容控件的颜色。</span><span class="sxs-lookup"><span data-stu-id="f18c4-112">Gets or sets the color of the content control.</span></span> <span data-ttu-id="f18c4-113">颜色以 "\#RRGGBB" 格式或使用颜色名称指定。</span><span class="sxs-lookup"><span data-stu-id="f18c4-113">Color is specified in '\#RRGGBB' format or by using the color name.</span></span>
+      获取或设置内容控件的颜色。 颜色以 " \# RRGGBB" 格式或使用颜色名称指定。
 
-      <span data-ttu-id="f18c4-114">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-114">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -81,9 +81,9 @@ items:
           - string
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="f18c4-115">获取内容控件的文本格式。</span><span class="sxs-lookup"><span data-stu-id="f18c4-115">Gets the text format of the content control.</span></span> <span data-ttu-id="f18c4-116">使用此对象获取和设置字体名称、大小、颜色和其他属性。</span><span class="sxs-lookup"><span data-stu-id="f18c4-116">Use this to get and set font name, size, color, and other properties.</span></span>
+      获取内容控件的文本格式。 使用此对象获取和设置字体名称、大小、颜色和其他属性。
 
-      <span data-ttu-id="f18c4-117">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-117">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -96,9 +96,9 @@ items:
           - 'word!Word.Interfaces.FontUpdateData:interface'
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#placeholderText:member'
     summary: |-
-      <span data-ttu-id="f18c4-118">获取或设置内容控件的占位符文本。</span><span class="sxs-lookup"><span data-stu-id="f18c4-118">Gets or sets the placeholder text of the content control.</span></span> <span data-ttu-id="f18c4-119">内容控件为空时，将显示灰色的文本。</span><span class="sxs-lookup"><span data-stu-id="f18c4-119">Dimmed text will be displayed when the content control is empty.</span></span>
+      获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
-      <span data-ttu-id="f18c4-120">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-120">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: placeholderText
     fullName: placeholderText
     langs:
@@ -111,9 +111,9 @@ items:
           - string
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#removeWhenEdited:member'
     summary: |-
-      <span data-ttu-id="f18c4-121">获取或设置指示内容控件在编辑后是否可以删除的值。</span><span class="sxs-lookup"><span data-stu-id="f18c4-121">Gets or sets a value that indicates whether the content control is removed after it is edited.</span></span> <span data-ttu-id="f18c4-122">与 cannotDelete 互相排斥。</span><span class="sxs-lookup"><span data-stu-id="f18c4-122">Mutually exclusive with cannotDelete.</span></span>
+      获取或设置指示内容控件在编辑后是否可以删除的值。 与 cannotDelete 互相排斥。
 
-      <span data-ttu-id="f18c4-123">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-123">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: removeWhenEdited
     fullName: removeWhenEdited
     langs:
@@ -126,9 +126,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#style:member'
     summary: |-
-      <span data-ttu-id="f18c4-124">获取或设置内容控件的样式名称。</span><span class="sxs-lookup"><span data-stu-id="f18c4-124">Gets or sets the style name for the content control.</span></span> <span data-ttu-id="f18c4-125">请对自定义样式和本地化样式名称使用此属性。</span><span class="sxs-lookup"><span data-stu-id="f18c4-125">Use this property for custom styles and localized style names.</span></span> <span data-ttu-id="f18c4-126">若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。</span><span class="sxs-lookup"><span data-stu-id="f18c4-126">To use the built-in styles that are portable between locales, see the "styleBuiltIn" property.</span></span>
+      获取或设置内容控件的样式名称。 请对自定义样式和本地化样式名称使用此属性。 若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
 
-      <span data-ttu-id="f18c4-127">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-127">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -141,9 +141,9 @@ items:
           - string
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#tag:member'
     summary: |-
-      <span data-ttu-id="f18c4-128">获取或设置用于标识内容控件的标记。</span><span class="sxs-lookup"><span data-stu-id="f18c4-128">Gets or sets a tag to identify a content control.</span></span>
+      获取或设置用于标识内容控件的标记。
 
-      <span data-ttu-id="f18c4-129">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-129">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: tag
     fullName: tag
     langs:
@@ -156,9 +156,9 @@ items:
           - string
   - uid: 'word!Word.Interfaces.ContentControlUpdateData#title:member'
     summary: |-
-      <span data-ttu-id="f18c4-130">获取或设置内容控件的标题。</span><span class="sxs-lookup"><span data-stu-id="f18c4-130">Gets or sets the title for a content control.</span></span>
+      获取或设置内容控件的标题。
 
-      <span data-ttu-id="f18c4-131">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f18c4-131">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
