--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.inlinepicturecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.inlinepicturecollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="83cb0-101">包含[InlinePicture](xref:word!Word.InlinePicture:class)对象的集合。</span><span class="sxs-lookup"><span data-stu-id="83cb0-101">Contains a collection of [Word.InlinePicture](xref:word!Word.InlinePicture:class) objects.</span></span>
+      包含[InlinePicture](xref:word!Word.InlinePicture:class)对象的集合。
 
-      <span data-ttu-id="83cb0-102">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83cb0-102">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.Interfaces.InlinePictureCollectionLoadOptions
     fullName: Word.Interfaces.InlinePictureCollectionLoadOptions
     langs:
@@ -22,6 +22,7 @@ items:
       - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentContentControl:member'
       - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#width:member'
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#$all:member'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -34,9 +35,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#altTextDescription:member'
     summary: |-
-      <span data-ttu-id="83cb0-103">对于集合中的每一项：获取或设置一个字符串，表示与嵌入式图像相关联的可选文字。</span><span class="sxs-lookup"><span data-stu-id="83cb0-103">For EACH ITEM in the collection: Gets or sets a string that represents the alternative text associated with the inline image.</span></span>
+      对于集合中的每一项：获取或设置一个字符串，表示与嵌入式图像相关联的可选文字。
 
-      <span data-ttu-id="83cb0-104">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83cb0-104">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: altTextDescription
     fullName: altTextDescription
     langs:
@@ -49,9 +50,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#altTextTitle:member'
     summary: |-
-      <span data-ttu-id="83cb0-105">对于集合中的每一项：获取或设置一个字符串，该字符串包含嵌入式图像的标题。</span><span class="sxs-lookup"><span data-stu-id="83cb0-105">For EACH ITEM in the collection: Gets or sets a string that contains the title for the inline image.</span></span>
+      对于集合中的每一项：获取或设置一个字符串，该字符串包含嵌入式图像的标题。
 
-      <span data-ttu-id="83cb0-106">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83cb0-106">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: altTextTitle
     fullName: altTextTitle
     langs:
@@ -64,9 +65,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="83cb0-107">对于集合中的每一项：获取或设置一个数字，该数字描述嵌入式图像的高度。</span><span class="sxs-lookup"><span data-stu-id="83cb0-107">For EACH ITEM in the collection: Gets or sets a number that describes the height of the inline image.</span></span>
+      对于集合中的每一项：获取或设置一个数字，该数字描述嵌入式图像的高度。
 
-      <span data-ttu-id="83cb0-108">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83cb0-108">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -79,9 +80,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#hyperlink:member'
     summary: |-
-      <span data-ttu-id="83cb0-109">对于集合中的每一项：获取或设置图像上的超链接。</span><span class="sxs-lookup"><span data-stu-id="83cb0-109">For EACH ITEM in the collection: Gets or sets a hyperlink on the image.</span></span> <span data-ttu-id="83cb0-110">使用 "\#" 将地址部分与可选位置部分分开。</span><span class="sxs-lookup"><span data-stu-id="83cb0-110">Use a '\#' to separate the address part from the optional location part.</span></span>
+      对于集合中的每一项：获取或设置图像上的超链接。 使用 " \# " 将地址部分与可选位置部分分开。
 
-      <span data-ttu-id="83cb0-111">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83cb0-111">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: hyperlink
     fullName: hyperlink
     langs:
@@ -94,9 +95,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#lockAspectRatio:member'
     summary: |-
-      <span data-ttu-id="83cb0-112">对于集合中的每一项：获取或设置一个值，该值指示在调整内嵌图像大小时是否保持其原始比例。</span><span class="sxs-lookup"><span data-stu-id="83cb0-112">For EACH ITEM in the collection: Gets or sets a value that indicates whether the inline image retains its original proportions when you resize it.</span></span>
+      对于集合中的每一项：获取或设置一个值，该值指示在调整内嵌图像大小时是否保持其原始比例。
 
-      <span data-ttu-id="83cb0-113">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83cb0-113">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: lockAspectRatio
     fullName: lockAspectRatio
     langs:
@@ -109,9 +110,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#paragraph:member'
     summary: |-
-      <span data-ttu-id="83cb0-114">对于集合中的每一项：获取包含嵌入式图像的父段落。</span><span class="sxs-lookup"><span data-stu-id="83cb0-114">For EACH ITEM in the collection: Gets the parent paragraph that contains the inline image.</span></span>
+      对于集合中的每一项：获取包含嵌入式图像的父段落。
 
-      <span data-ttu-id="83cb0-115">\[[API 集： WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83cb0-115">\[ [API set: WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: paragraph
     fullName: paragraph
     langs:
@@ -124,9 +125,9 @@ items:
           - 'word!Word.Interfaces.ParagraphLoadOptions:interface'
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentContentControl:member'
     summary: |-
-      <span data-ttu-id="83cb0-116">对于集合中的每一项：获取包含该嵌入式图像的内容控件。</span><span class="sxs-lookup"><span data-stu-id="83cb0-116">For EACH ITEM in the collection: Gets the content control that contains the inline image.</span></span> <span data-ttu-id="83cb0-117">如果没有父内容控件，则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="83cb0-117">Throws an error if there isn't a parent content control.</span></span>
+      对于集合中的每一项：获取包含该嵌入式图像的内容控件。 如果没有父内容控件，则会引发错误。
 
-      <span data-ttu-id="83cb0-118">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83cb0-118">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: parentContentControl
     fullName: parentContentControl
     langs:
@@ -139,9 +140,9 @@ items:
           - 'word!Word.Interfaces.ContentControlLoadOptions:interface'
   - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="83cb0-119">对于集合中的每一项：获取或设置一个值，该值描述嵌入式图像的宽度。</span><span class="sxs-lookup"><span data-stu-id="83cb0-119">For EACH ITEM in the collection: Gets or sets a number that describes the width of the inline image.</span></span>
+      对于集合中的每一项：获取或设置一个值，该值描述嵌入式图像的宽度。
 
-      <span data-ttu-id="83cb0-120">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83cb0-120">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
