--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.tablecellcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.tablecellcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.TableCellCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="93507-101">一个用于更新 TableCellCollection 对象上的数据的接口，可用于 "tableCellCollection （</span><span class="sxs-lookup"><span data-stu-id="93507-101">An interface for updating data on the TableCellCollection object, for use in "tableCellCollection.set(</span></span><!-- --><span data-ttu-id="93507-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="93507-102"></span></span><!-- --><span data-ttu-id="93507-103">)".</span><span class="sxs-lookup"><span data-stu-id="93507-103"></span></span>'
+    summary: '一个用于更新 TableCellCollection 对象上的数据的接口，可用于`tableCellCollection.set({ ... })`<!-- -->.'
     name: Word.Interfaces.TableCellCollectionUpdateData
     fullName: Word.Interfaces.TableCellCollectionUpdateData
     langs:
