--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.sectioncollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.sectioncollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.SectionCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="ee1b0-101">一个用于更新 SectionCollection 对象上的数据的接口，可用于 "sectionCollection （</span><span class="sxs-lookup"><span data-stu-id="ee1b0-101">An interface for updating data on the SectionCollection object, for use in "sectionCollection.set(</span></span><!-- --><span data-ttu-id="ee1b0-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="ee1b0-102"></span></span><!-- --><span data-ttu-id="ee1b0-103">)".</span><span class="sxs-lookup"><span data-stu-id="ee1b0-103"></span></span>'
+    summary: '一个用于更新 SectionCollection 对象上的数据的接口，可用于`sectionCollection.set({ ... })`<!-- -->.'
     name: Word.Interfaces.SectionCollectionUpdateData
     fullName: Word.Interfaces.SectionCollectionUpdateData
     langs:
