--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.sectiondata.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.sectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.SectionData:interface'
-    summary: <span data-ttu-id="d7155-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="d7155-101">An interface describing the data returned by calling "section.toJSON()".</span></span>
+    summary: 描述通过调用返回的数据的接口`section.toJSON()`<!-- -->.
     name: Word.Interfaces.SectionData
     fullName: Word.Interfaces.SectionData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'word!Word.Interfaces.SectionData#body:member'
   - uid: 'word!Word.Interfaces.SectionData#body:member'
     summary: |-
-      <span data-ttu-id="d7155-102">获取节的 body 对象。</span><span class="sxs-lookup"><span data-stu-id="d7155-102">Gets the body object of the section.</span></span> <span data-ttu-id="d7155-103">这不包括页眉/页脚和其他节元数据。</span><span class="sxs-lookup"><span data-stu-id="d7155-103">This does not include the header/footer and other section metadata.</span></span> <span data-ttu-id="d7155-104">只读。</span><span class="sxs-lookup"><span data-stu-id="d7155-104">Read-only.</span></span>
+      获取节的 body 对象。 这不包括页眉/页脚和其他节元数据。 只读。
 
-      <span data-ttu-id="d7155-105">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7155-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: body
     fullName: body
     langs:
