--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.tablecellupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.tablecellupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.TableCellUpdateData:interface'
-    summary: '<span data-ttu-id="9a4bc-101">一个用于更新 TableCell 对象上的数据的接口，可用于 "tableCell （</span><span class="sxs-lookup"><span data-stu-id="9a4bc-101">An interface for updating data on the TableCell object, for use in "tableCell.set(</span></span><!-- --><span data-ttu-id="9a4bc-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="9a4bc-102"></span></span><!-- --><span data-ttu-id="9a4bc-103">)".</span><span class="sxs-lookup"><span data-stu-id="9a4bc-103"></span></span>'
+    summary: '一个用于更新 TableCell 对象上的数据的接口，可用于`tableCell.set({ ... })`<!-- -->.'
     name: Word.Interfaces.TableCellUpdateData
     fullName: Word.Interfaces.TableCellUpdateData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'word!Word.Interfaces.TableCellUpdateData#verticalAlignment:member'
   - uid: 'word!Word.Interfaces.TableCellUpdateData#body:member'
     summary: |-
-      <span data-ttu-id="9a4bc-104">获取单元格的 body 对象。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-104">Gets the body object of the cell.</span></span>
+      获取单元格的 body 对象。
 
-      <span data-ttu-id="9a4bc-105">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a4bc-105">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: body
     fullName: body
     langs:
@@ -32,9 +32,9 @@ items:
           - 'word!Word.Interfaces.BodyUpdateData:interface'
   - uid: 'word!Word.Interfaces.TableCellUpdateData#columnWidth:member'
     summary: |-
-      <span data-ttu-id="9a4bc-106">获取并设置单元格的列宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-106">Gets and sets the width of the cell's column in points.</span></span> <span data-ttu-id="9a4bc-107">此方法适用于一致的 table。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-107">This is applicable to uniform tables.</span></span>
+      获取并设置单元格的列宽度（以磅为单位）。 此方法适用于一致的 table。
 
-      <span data-ttu-id="9a4bc-108">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a4bc-108">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: columnWidth
     fullName: columnWidth
     langs:
@@ -47,9 +47,9 @@ items:
           - number
   - uid: 'word!Word.Interfaces.TableCellUpdateData#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="9a4bc-109">获取并设置单元格的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-109">Gets and sets the horizontal alignment of the cell.</span></span> <span data-ttu-id="9a4bc-110">该值可以是 "Left"、"居中"、"Right" 或 "两端对齐"。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-110">The value can be 'Left', 'Centered', 'Right', or 'Justified'.</span></span>
+      获取并设置单元格的水平对齐方式。 该值可以是 "Left"、"居中"、"Right" 或 "两端对齐"。
 
-      <span data-ttu-id="9a4bc-111">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a4bc-111">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -62,9 +62,9 @@ items:
           - 'word!Word.Interfaces.TableCellUpdateData#horizontalAlignment~0:complex'
   - uid: 'word!Word.Interfaces.TableCellUpdateData#shadingColor:member'
     summary: |-
-      <span data-ttu-id="9a4bc-112">获取或设置单元格的底纹色。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-112">Gets or sets the shading color of the cell.</span></span> <span data-ttu-id="9a4bc-113">颜色以 "\#RRGGBB" 格式或使用颜色名称指定。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-113">Color is specified in "\#RRGGBB" format or by using the color name.</span></span>
+      获取或设置单元格的底纹色。 颜色以 " \# RRGGBB" 格式或使用颜色名称指定。
 
-      <span data-ttu-id="9a4bc-114">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a4bc-114">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: shadingColor
     fullName: shadingColor
     langs:
@@ -77,9 +77,9 @@ items:
           - string
   - uid: 'word!Word.Interfaces.TableCellUpdateData#value:member'
     summary: |-
-      <span data-ttu-id="9a4bc-115">获取并设置单元格的文本。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-115">Gets and sets the text of the cell.</span></span>
+      获取并设置单元格的文本。
 
-      <span data-ttu-id="9a4bc-116">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a4bc-116">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -92,9 +92,9 @@ items:
           - string
   - uid: 'word!Word.Interfaces.TableCellUpdateData#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="9a4bc-117">获取并设置单元格的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-117">Gets and sets the vertical alignment of the cell.</span></span> <span data-ttu-id="9a4bc-118">值可以是 ' Top '、' Center ' 或 ' 底端 '。</span><span class="sxs-lookup"><span data-stu-id="9a4bc-118">The value can be 'Top', 'Center', or 'Bottom'.</span></span>
+      获取并设置单元格的垂直对齐方式。 值可以是 ' Top '、' Center ' 或 ' 底端 '。
 
-      <span data-ttu-id="9a4bc-119">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a4bc-119">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
