--- a/docs/docs-ref-autogen/outlook/outlook/office.appointmentread.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.appointmentread.yml
@@ -457,10 +457,8 @@ items:
       });
       ```
       ```javascript
-      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/55-display-items/display-reply-forms.yaml
-      Office.context.mailbox.item.displayReplyAllForm(
-        "This is a reply ALL with <b>some bold text</b>."
-      );
+      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/99-preview-apis/display-reply-forms.yaml
+      Office.context.mailbox.item.displayReplyAllForm("This is a reply ALL with <b>some bold text</b>.");
       ```
     name: displayReplyAllForm(formData)
     fullName: displayReplyAllForm(formData)
@@ -495,6 +493,17 @@ items:
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：约会与会者
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/99-preview-apis/display-reply-forms.yaml
+      Office.context.mailbox.item.displayReplyAllFormAsync("This is a reply ALL with <b>some bold text</b>.", function(
+        asyncResult
+      ) {
+        console.log(JSON.stringify(asyncResult));
+      });
+      ```
     isPreview: true
     name: 'displayReplyAllFormAsync(formData, options, callback)'
     fullName: 'displayReplyAllFormAsync(formData, options, callback)'
@@ -604,29 +613,23 @@ items:
       });
       ```
       ```javascript
-      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/55-display-items/display-reply-forms.yaml
-      Office.context.mailbox.item.displayReplyForm(
-        "This is a reply with <i>some text in italics</i>."
-      );
+      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/99-preview-apis/display-reply-forms.yaml
+      Office.context.mailbox.item.displayReplyForm("This is a reply with <i>some text in italics</i>.");
       ```
       ```javascript
-      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/55-display-items/display-reply-with-attachments.yaml
-      Office.context.mailbox.item.displayReplyForm(
-      {
-          htmlBody : "This is a reply with a couple of attachments - an inline image and an item<br><img src='cid:dog.jpg'>",
-          attachments :
-          [
-              { type: "file", url: "http://i.imgur.com/9S36xvA.jpg", name: "dog.jpg", isInline: true },
-              { type: "item", itemId : Office.context.mailbox.item.itemId, name: "test_email.msg" }
-          ],
-          options : { asyncContext: null },
-          callback : function (result)
-          {
-              if (result.status !== Office.AsyncResultStatus.Succeeded)
-              {
-                  console.error(`Action failed with message ${result.error.message}`);
-              }
+      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/99-preview-apis/display-reply-with-attachments.yaml
+      Office.context.mailbox.item.displayReplyForm({
+        htmlBody: "This is a reply with a couple of attachments - an inline image and an item<br><img src='cid:dog.jpg'>",
+        attachments: [
+          { type: "file", url: "http://i.imgur.com/9S36xvA.jpg", name: "dog.jpg", isInline: true },
+          { type: "item", itemId: Office.context.mailbox.item.itemId, name: "test_email.msg" }
+        ],
+        options: { asyncContext: null },
+        callback: function(result) {
+          if (result.status !== Office.AsyncResultStatus.Succeeded) {
+            console.error(`Action failed with message ${result.error.message}`);
           }
+        }
       });
       ```
     name: displayReplyForm(formData)
@@ -662,6 +665,34 @@ items:
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：约会与会者
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/99-preview-apis/display-reply-forms.yaml
+      Office.context.mailbox.item.displayReplyFormAsync("This is a reply with <i>some text in italics</i>.", function(
+        asyncResult
+      ) {
+        console.log(JSON.stringify(asyncResult));
+      });
+      ```
+      ```javascript
+      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/99-preview-apis/display-reply-with-attachments.yaml
+      // The async version is only available in preview, and
+      // provides a callback when the new appointment form has been created.
+      Office.context.mailbox.item.displayReplyFormAsync(
+        {
+          htmlBody: "This is a reply with a couple of attachments - an inline image and an item<br><img src='cid:dog.jpg'>",
+          attachments: [
+            { type: "file", url: "http://i.imgur.com/9S36xvA.jpg", name: "dog.jpg", isInline: true },
+            { type: "item", itemId: Office.context.mailbox.item.itemId, name: "test_email.msg" }
+          ]
+        },
+        function(asyncResult) {
+          console.log(JSON.stringify(asyncResult));
+        }
+      );
+      ```
     isPreview: true
     name: 'displayReplyFormAsync(formData, options, callback)'
     fullName: 'displayReplyFormAsync(formData, options, callback)'
@@ -691,7 +722,7 @@ items:
     summary: |-
       获取约会结束的日期和时间。
 
-      `end`属性是 `Date` 表示为协调世界时（UTC）日期和时间值的对象。 可以使用 `convertToLocalClientTime` 方法将 `end` 属性值转换为客户端的本地日期和时间。
+      `end`属性是 `Date` 表示为协调通用时间 (UTC) 日期和时间值的对象。 可以使用 `convertToLocalClientTime` 方法将 `end` 属性值转换为客户端的本地日期和时间。
 
       使用 `Time.setAsync` 方法设置结束时间时，应使用 `convertToUtcClientTime` 方法将客户端的本地时间转换为服务器的 UTC。
     remarks: |-
@@ -719,7 +750,7 @@ items:
     summary: |-
       获取约会的位置。
 
-      该 `enhancedLocation` 属性返回一个[EnhancedLocation](xref:outlook!Office.EnhancedLocation:interface)对象，该对象允许您获取与约会关联的一组位置（每个由[LocationDetails](xref:outlook!Office.LocationDetails:interface)对象表示）。
+      该 `enhancedLocation` 属性返回一个[EnhancedLocation](xref:outlook!Office.EnhancedLocation:interface)对象，该对象使您能够获取与约会关联) 的[LocationDetails](xref:outlook!Office.LocationDetails:interface)对象所代表的一组位置 (。
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -773,7 +804,7 @@ items:
 
       **错误**：
 
-      - `AttachmentTypeNotSupported`<!-- -->：不支持该附件类型。 不受支持的类型包括 Rtf 格式的嵌入图像或电子邮件或日历项目（如联系人或任务项）以外的项附件类型。
+      - `AttachmentTypeNotSupported`<!-- -->：不支持该附件类型。 不受支持的类型包括 Rtf 格式的嵌入图像或电子邮件或日历项目之外的项目附件类型 (如联系人或任务项) 。
 
       - `InvalidAttachmentId`<!-- -->：附件标识符不存在。
 
@@ -855,7 +886,7 @@ items:
 
       **错误**：
 
-      - `AttachmentTypeNotSupported`<!-- -->：不支持该附件类型。 不受支持的类型包括 Rtf 格式的嵌入图像或电子邮件或日历项目（如联系人或任务项）以外的项附件类型。
+      - `AttachmentTypeNotSupported`<!-- -->：不支持该附件类型。 不受支持的类型包括 Rtf 格式的嵌入图像或电子邮件或日历项目之外的项目附件类型 (如联系人或任务项) 。
 
       - `InvalidAttachmentId`<!-- -->：附件标识符不存在。
     name: 'getAttachmentContentAsync(attachmentId, callback)'
@@ -1021,7 +1052,7 @@ items:
     summary: |-
       获取[通过可操作邮件激活](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)加载项时传递的初始化数据<!-- -->.
 
-      **注意**：仅 outlook 2016 或更高版本（大于16.0.8413.1000 的即点即用版本）和适用于 Office 365 的 outlook 网页版支持此方法。
+      **注意**：只有 outlook 2016 或更高版本的 Windows (即点即用版本大于 16.0.8413.1000) 和 outlook 网页版（适用于 Office 365）时才支持此方法。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1053,7 +1084,7 @@ items:
     summary: |-
       获取[通过可操作邮件激活](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)加载项时传递的初始化数据<!-- -->.
 
-      **注意**：仅 outlook 2016 或更高版本（大于16.0.8413.1000 的即点即用版本）和适用于 Office 365 的 outlook 网页版支持此方法。
+      **注意**：只有 outlook 2016 或更高版本的 Windows (即点即用版本大于 16.0.8413.1000) 和 outlook 网页版（适用于 Office 365）时才支持此方法。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1696,9 +1727,9 @@ items:
           - string
   - uid: 'outlook!Office.AppointmentRead#normalizedSubject:member'
     summary: |-
-      获取项目的主题，删除所有前缀（包括 RE：和 FWD：）。
+      获取项目的主题，其中删除了所有前缀 (包括 RE：和 FWD： ) 。
 
-      `normalizedSubject`属性获取项目的主题，其中包含任何标准前缀（如 RE：和 FW：）由电子邮件程序添加的。 若要获取包含完整前缀的项目主题，请使用 `subject` 属性。
+      `normalizedSubject`属性获取项目的主题，其中包含由电子邮件程序添加的任何标准前缀 (例如 RE：和 FW： ) 。 若要获取包含完整前缀的项目主题，请使用 `subject` 属性。
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
@@ -2031,7 +2062,7 @@ items:
     summary: |-
       获取实例所属的系列的 ID。
 
-      在 web 上的 Outlook 和桌面客户端中， `seriesId` 返回此项所属的父（系列）项的 Exchange Web 服务（EWS） ID。 但是，在 iOS 和 Android 上，Webcasts&seriesid 返回父项的 REST ID。
+      在 web 上的 Outlook 和桌面客户端中，将 `seriesId` 返回此项所属的父 (系列) 项的 Exchange Web 服务 (EWS) ID。 但是，在 iOS 和 Android 上，Webcasts&seriesid 返回父项的 REST ID。
 
       **注意**：属性返回的标识符与 `seriesId` Exchange Web 服务项目标识符相同。 `seriesId`属性与 OUTLOOK REST API 使用的 Outlook id 不相同。 使用此值进行 REST API 调用之前，应使用此值进行转换`Office.context.mailbox.convertToRestId`<!-- -->. 有关更多详细信息，请参阅[使用 outlook 外接程序中的 OUTLOOK REST api](https://docs.microsoft.com/office/dev/add-ins/outlook/use-rest-api)<!-- -->.
 
@@ -2071,7 +2102,7 @@ items:
     summary: |-
       获取约会开始的日期和时间。
 
-      `start`属性是 `Date` 表示为协调世界时（UTC）日期和时间值的对象。 可以使用 `convertToLocalClientTime` 方法将值转换为客户端的本地日期和时间。
+      `start`属性是 `Date` 表示为协调通用时间 (UTC) 日期和时间值的对象。 可以使用 `convertToLocalClientTime` 方法将值转换为客户端的本地日期和时间。
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
